(sp) adding spanish translation

--- a/locale/es/LC_MESSAGES/advanced/chapter-12.po
+++ b/locale/es/LC_MESSAGES/advanced/chapter-12.po
@@ -6,21 +6,21 @@
 #
 # Translators:
 # Vicky Vergara <vicky@georepublic.de>, 2022
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-04 09:41-0600\n"
-"PO-Revision-Date: 2022-03-01 19:42+0000\n"
-"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
+"PO-Revision-Date: 2024-03-19 05:57+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/advanced-chapter-12/es/>\n"
 "Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../../build/docs/advanced/chapter-12.rst:11
@@ -78,7 +78,7 @@ msgstr "Veamos qué tablas se han creado:"
 
 #: ../../build/docs/advanced/chapter-12.rst:52
 msgid "Run: ``psql -U user -d osm_data -c \"\\d\"``"
-msgstr "Ejecutar:  ``psql -U user -d osm_data -c \"\\d\"``"
+msgstr "Ejecutar: ``psql -U user -d osm_data -c \"\\d\"``"
 
 #: ../../build/docs/advanced/chapter-12.rst:53
 msgid ""
@@ -155,11 +155,10 @@ msgid ""
 "each road link. The results above, show that the network topology does "
 "not have any source and target information."
 msgstr ""
-"Asegúrese de que los datos proporcionan una correcta  `Routing Network "
-"Topology` que consta de información sobre los identificadores de origen y"
-" destino para cada vínculo de carretera. Los resultados anteriores "
-"muestran que la topología de red no tiene ninguna información de origen y"
-" destino."
+"Asegurarse de que los datos proporcionan una correcta `Red Topológica de "
+"ruteo` que consta de información sobre los identificadores de origen y "
+"destino para cada vínculo de carretera. Los resultados anteriores muestran "
+"que la topología de red no tiene ninguna información de origen y destino."
 
 #: ../../build/docs/advanced/chapter-12.rst:89
 msgid "Creation of the `Routing Network Topology` is necessary."
@@ -208,16 +207,16 @@ msgid ""
 "For additional information see `pgr_createTopology "
 "<https://docs.pgrouting.org/latest/en/pgr_createTopology.html>`_."
 msgstr ""
-"Para obtener más información, consultar  `pgr_createTopology "
-"<https://docs.pgrouting.org/latest/en/pgr_createTopology.html>`_."
+"Para obtener más información, consultar `pgr_createTopology <https://docs."
+"pgrouting.org/latest/en/pgr_createTopology.html>`_."
 
 #: ../../build/docs/advanced/chapter-12.rst:112
 msgid ""
 "First add source and target column, then run the ``pgr_createTopology`` "
 "function ... and wait."
 msgstr ""
-"Primero, agrega la columna de origen y destino y, a continuación, ejecuta"
-" la función  ``pgr_createTopology`` ... esperar."
+"Primero, agregar la columna de origen y destino y, a continuación, ejecutar "
+"la función ``pgr_createTopology`` ... esperar."
 
 #: ../../build/docs/advanced/chapter-12.rst:115
 msgid "Depending on the network size this process may take from minutes to hours."
@@ -350,4 +349,3 @@ msgstr ""
 "algunas funciones de `topology manipulation "
 "<https://docs.pgrouting.org/latest/en/topology-functions.html>`_ ayudan a"
 " detectar y reparar algunos errores topológicos en los datos."
-
