--- a/locale/es/LC_MESSAGES/appendix/appendix-2.po
+++ b/locale/es/LC_MESSAGES/appendix/appendix-2.po
@@ -7,21 +7,22 @@
 # Translators:
 # Vicky Vergara <vicky@georepublic.de>, 2022
 # 
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-10 17:38+0000\n"
-"PO-Revision-Date: 2022-03-01 19:42+0000\n"
-"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
-"Language-Team: Spanish (https://www.transifex.com/pgrouting/teams/1219/es/)\n"
+"PO-Revision-Date: 2024-03-19 05:57+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/appendix-appendix-2/es/>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.9.1\n"
-"Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../../build/docs/appendix/appendix-2.rst:11
 msgid "Appendix: Installation"
@@ -78,8 +79,8 @@ msgid ""
 "pgRouting on Ubuntu can be installed using packages from a `PostgreSQL "
 "repository <https://apt.postgresql.org/pub/repos/apt/>`__:"
 msgstr ""
-"pgRouting en Ubuntu se puede instalar utilizando paquetes de un  `PostgreSQL"
-" repository <https://apt.postgresql.org/pub/repos/apt/>`__:"
+"pgRouting en Ubuntu se puede instalar utilizando paquetes de un `repositorio "
+"de PostgreSQL <https://apt.postgresql.org/pub/repos/apt/>`__:"
 
 #: ../../build/docs/appendix/appendix-2.rst:31
 msgid "Using a terminal window:"
@@ -91,7 +92,7 @@ msgid ""
 "if not installed yet."
 msgstr ""
 "Esto también instalará todos los paquetes necesarios como PostgreSQL y "
-"PostGIS si  todavía no están instalados."
+"PostGIS si todavía no están instalados."
 
 #: ../../build/docs/appendix/appendix-2.rst:48
 msgid "To be up-to-date with changes and improvements"
