--- a/locale/es/LC_MESSAGES/basic/appendix.po
+++ b/locale/es/LC_MESSAGES/basic/appendix.po
@@ -8,21 +8,21 @@
 # Manuel Retamozo <manuel.retamozo@gmail.com>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # Vicky Vergara <vicky@georepublic.de>, 2022
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-03 13:41-0600\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/basic-appendix/es/>\n"
 "Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../../build/docs/basic/appendix.rst:11
@@ -38,7 +38,6 @@ msgid "**Exercise**: 1 (**Chapter:** Pedestrian)"
 msgstr "**Ejercicio**: 1 (**Capítulo:** Peatón)"
 
 #: ../../build/docs/basic/appendix.rst:19
-#, fuzzy
 msgid ":ref:`basic/pedestrian:Exercise 1: Single pedestrian routing`"
 msgstr ":ref:`basic/pedestrian:Ejercicio 1: Ruteo para un sólo peatón`"
 
@@ -47,62 +46,61 @@ msgid "**Exercise**: 2 (**Chapter:** Pedestrian)"
 msgstr "**Ejercicio**: 2 (**Capítulo:** Peatón)"
 
 #: ../../build/docs/basic/appendix.rst:27
-#, fuzzy
 msgid ""
 ":ref:`basic/pedestrian:Exercise 2: Many Pedestrians going to the same "
 "destination`"
-msgstr ":ref:`basic/pedestrian:Ejercicio 2: Muchos peatones van al mismo destino`"
+msgstr ""
+":ref:`basic/pedestrian:Ejercicio 2: Muchos peatones van al mismo destino`"
 
 #: ../../build/docs/basic/appendix.rst:33
 msgid "**Exercise**: 3 (**Chapter:** Pedestrian)"
 msgstr "**Ejercicio**: 3 (**Capítulo:** Peatón)"
 
 #: ../../build/docs/basic/appendix.rst:35
-#, fuzzy
 msgid ""
 ":ref:`basic/pedestrian:Exercise 3: Many Pedestrians departing from the "
 "same location`"
-msgstr ":ref:`basic/pedestrian:Ejercicio 3: Muchos peatones que salen de la misma ubicación`"
+msgstr ""
+":ref:`basic/pedestrian:Ejercicio 3: Muchos peatones que salen de la misma "
+"ubicación`"
 
 #: ../../build/docs/basic/appendix.rst:41
 msgid "**Exercise**: 4 (**Chapter:** Pedestrian)"
 msgstr "**Ejercicio**: 4 (**Capítulo:** Peatón)"
 
 #: ../../build/docs/basic/appendix.rst:43
-#, fuzzy
 msgid ""
 ":ref:`basic/pedestrian:Exercise 4: Many Pedestrians going to different "
 "destinations`"
-msgstr ":ref:`basic/pedestrian:Ejercicio 4: Muchos peatones que van a diferentes destinos`"
+msgstr ""
+":ref:`basic/pedestrian:Ejercicio 4: Muchos peatones que van a diferentes "
+"destinos`"
 
 #: ../../build/docs/basic/appendix.rst:49
 msgid "**Exercise**: 5 (**Chapter:** Pedestrian)"
 msgstr "**Ejercicio**: 5 (**Capítulo:** Peatón)"
 
 #: ../../build/docs/basic/appendix.rst:51
-#, fuzzy
 msgid ""
 ":ref:`basic/pedestrian:Exercise 5: Many Pedestrians going to different "
 "destinations returning aggregate costs`"
 msgstr ""
-":ref:`basic/pedestrian:Ejercicio 5: Muchos Peatones que van a diferentes destinos "
-"devolviendo costos agregados`"
+":ref:`basic/pedestrian:Ejercicio 5: Muchos Peatones que van a diferentes "
+"destinos devolviendo costos agregados`"
 
 #: ../../build/docs/basic/appendix.rst:57
 msgid "**Exercise**: 6 (**Chapter:** Pedestrian)"
 msgstr "**Ejercicio**: 6 (**Capítulo:** Peatón)"
 
 #: ../../build/docs/basic/appendix.rst:59
-#, fuzzy
 msgid ""
 ":ref:`basic/pedestrian:Exercise 6: Many Pedestrians going to different "
 "destinations summarizing the total costs per departure`"
 msgstr ""
-":ref:`basic/pedestrian:Ejercicio 6: Muchos peatones van a diferentes destinos resumiendo "
-"costos totales por salida`"
+":ref:`basic/pedestrian:Ejercicio 6: Muchos peatones van a diferentes "
+"destinos resumiendo costos totales por salida`"
 
 #: ../../build/docs/basic/appendix.rst:65
-#, fuzzy
 msgid "Solutions to :doc:`vehicle`"
 msgstr "Soluciones a :doc:`vehicle`"
 
@@ -111,7 +109,6 @@ msgid "**Exercise**: 1 (**Chapter:** Vehicle)"
 msgstr "**Ejercicio**: 1 (**Capítulo:** vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:70
-#, fuzzy
 msgid ":ref:`basic/vehicle:Exercise 1: Vehicle routing - going`"
 msgstr ":ref:`basic/vehicle:Ejercicio 1: Ruteo de vehículos - ida`"
 
@@ -120,7 +117,6 @@ msgid "**Exercise**: 2 (**Chapter:** Vehicle)"
 msgstr "**Ejercicio**: 2 (**Capítulo:** Vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:78
-#, fuzzy
 msgid ":ref:`basic/vehicle:Exercise 2: Vehicle routing - returning`"
 msgstr ":ref:`basic/vehicle:Ejercicio 2: Ruteo de vehículos - regreso`"
 
@@ -129,16 +125,16 @@ msgid "**Exercise**: 3 (**Chapter:** Vehicle)"
 msgstr "**Ejercicio**: 3 (**Capítulo:** Vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:86
-#, fuzzy
 msgid ":ref:`basic/vehicle:Exercise 3: Vehicle routing when time is money`"
-msgstr ":ref:`basic/vehicle:Ejercicio 3: Ruteo de vehículos cuando el tiempo es dinero`"
+msgstr ""
+":ref:`basic/vehicle:Ejercicio 3: Ruteo de vehículos cuando el tiempo es "
+"dinero`"
 
 #: ../../build/docs/basic/appendix.rst:92
 msgid "**Exercise**: 4 (**Chapter:** Vehicle)"
 msgstr "**Ejercicio**: 4 (**Capítulo:** Vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:94
-#, fuzzy
 msgid ":ref:`basic/vehicle:Exercise 4: Vehicle routing without penalization`"
 msgstr ":ref:`basic/vehicle:Ejercicio 4: Ruteo de vehículos sin penalización`"
 
@@ -147,12 +143,10 @@ msgid "**Exercise**: 5 (**Chapter:** Vehicle)"
 msgstr "**Ejercicio**: 5 (**Capítulo:** Vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:102
-#, fuzzy
 msgid ":ref:`basic/vehicle:Exercise 5: Vehicle routing with penalization`"
 msgstr ":ref:`basic/vehicle:Ejercicio 5: Ruteo de vehículos con penalización`"
 
 #: ../../build/docs/basic/appendix.rst:109
-#, fuzzy
 msgid "Solutions to :doc:`sql_function`"
 msgstr "Soluciones a :doc:`sql_function`"
 
@@ -161,40 +155,39 @@ msgid "**Exercise**: 1 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 1 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:115
-#, fuzzy
 msgid ":ref:`basic/sql_function:Exercise 1: Creating a view for routing`"
-msgstr ":ref:`basic/sql_function:Ejercicio 1: Creación de una vista para el ruteo`"
+msgstr ""
+":ref:`basic/sql_function:Ejercicio 1: Creación de una vista para el ruteo`"
 
 #: ../../build/docs/basic/appendix.rst:121
 msgid "**Exercise**: 2 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 2 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:123
-#, fuzzy
 msgid ""
 ":ref:`basic/sql_function:Exercise 2: Limiting the road network within an "
 "area`"
-msgstr ":ref:`basic/sql_function:Ejercicio 2: Limitar la red viaria dentro de un área`"
+msgstr ""
+":ref:`basic/sql_function:Ejercicio 2: Limitar la red viaria dentro de un "
+"área`"
 
 #: ../../build/docs/basic/appendix.rst:128
 msgid "**Exercise**: 3 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 3 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:130
-#, fuzzy
 msgid ""
 ":ref:`basic/sql_function:Exercise 3: Creating a materialized view for "
 "routing pedestrians`"
 msgstr ""
-":ref:`basic/sql_function:Ejercicio 3: Creación de una vista materializada para ruteo de los "
-"peatones`"
+":ref:`basic/sql_function:Ejercicio 3: Creación de una vista materializada "
+"para ruteo de los peatones`"
 
 #: ../../build/docs/basic/appendix.rst:136
 msgid "**Exercise**: 4 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 4 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:138
-#, fuzzy
 msgid ":ref:`basic/sql_function:Exercise 4: Testing the views for routing`"
 msgstr ":ref:`basic/sql_function:Ejercicio 4: Probar las vistas para el ruteo`"
 
@@ -203,7 +196,6 @@ msgid "**Exercise**: 5 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 5 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:147
-#, fuzzy
 msgid ":ref:`basic/sql_function:Exercise 5: Get additional information`"
 msgstr ":ref:`basic/sql_function:Ejercicio 5: Obtener información adicional`"
 
@@ -212,34 +204,35 @@ msgid "**Exercise**: 6 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 6 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:155
-#, fuzzy
 msgid ":ref:`basic/sql_function:Exercise 6: Route geometry (human readable)`"
-msgstr ":ref:`basic/sql_function:Ejercicio 6: Geometría de la ruta (legible para humanos)`"
+msgstr ""
+":ref:`basic/sql_function:Ejercicio 6: Geometría de la ruta (legible para "
+"humanos)`"
 
 #: ../../build/docs/basic/appendix.rst:161
 msgid "**Exercise**: 7 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 7 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:163
-#, fuzzy
 msgid ":ref:`basic/sql_function:Exercise 7: Route geometry (binary format)`"
-msgstr ":ref:`basic/sql_function:Ejercicio 7: Geometría de ruta (formato binario)`"
+msgstr ""
+":ref:`basic/sql_function:Ejercicio 7: Geometría de ruta (formato binario)`"
 
 #: ../../build/docs/basic/appendix.rst:169
 msgid "**Exercise**: 8 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 8 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:171
-#, fuzzy
 msgid ":ref:`basic/sql_function:Exercise 8: Route geometry directionality`"
-msgstr ":ref:`basic/sql_function:Ejercicio 8: Direccionalidad de la geometría de la ruta`"
+msgstr ""
+":ref:`basic/sql_function:Ejercicio 8: Direccionalidad de la geometría de la "
+"ruta`"
 
 #: ../../build/docs/basic/appendix.rst:177
 msgid "**Exercise**: 9 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 9 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:179
-#, fuzzy
 msgid ":ref:`basic/sql_function:Exercise 9: Using the geometry`"
 msgstr ":ref:`basic/sql_function:Ejercicio 9: Uso de la geometría`"
 
@@ -248,7 +241,6 @@ msgid "**Exercise**: 10 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 10 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:187
-#, fuzzy
 msgid ":ref:`basic/sql_function:Exercise 10: Function for an application`"
 msgstr ":ref:`basic/sql_function:Ejercicio 10: Función para una aplicación`"
 
@@ -257,12 +249,10 @@ msgid "**Exercise**: 11 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 11 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:194
-#, fuzzy
 msgid ":ref:`basic/sql_function:Exercise 11: Using the function`"
 msgstr ":ref:`basic/sql_function:Ejercicio 11: Uso de la función`"
 
 #: ../../build/docs/basic/appendix.rst:200
-#, fuzzy
 msgid "Solutions to :doc:`plpgsql_function`"
 msgstr "Soluciones a :doc:`plpgsql_function`"
 
@@ -271,7 +261,6 @@ msgid "**Exercise**: 1 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 1 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:205
-#, fuzzy
 msgid ":ref:`basic/plpgsql_function:Exercise 1: Number of Vertices`"
 msgstr ":ref:`basic/plpgsql_function:Ejercicio 1: Número de vértices`"
 
@@ -301,7 +290,6 @@ msgid "**Exercise**: 2 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 2 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:226
-#, fuzzy
 msgid ":ref:`basic/plpgsql_function:Exercise 2: Vertices on a table`"
 msgstr ":ref:`basic/plpgsql_function:Ejercicio 2: Vértices en una tabla`"
 
@@ -310,7 +298,6 @@ msgid "**Exercise**: 3 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 3 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:244
-#, fuzzy
 msgid ":ref:`basic/plpgsql_function:Exercise 3: Nearest Vertex`"
 msgstr ":ref:`basic/plpgsql_function:Ejercicio 3: Vértice más cercano`"
 
@@ -334,34 +321,34 @@ msgid "**Exercise**: 4 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 4 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:266
-#, fuzzy
 msgid ":ref:`basic/plpgsql_function:Exercise 4: Nearest vertex function`"
-msgstr ":ref:`basic/plpgsql_function:Ejercicio 4: Función de vértice más cercano`"
+msgstr ""
+":ref:`basic/plpgsql_function:Ejercicio 4: Función de vértice más cercano`"
 
 #: ../../build/docs/basic/appendix.rst:271
 msgid "**Exercise**: 5 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 5 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:273
-#, fuzzy
 msgid ":ref:`basic/plpgsql_function:Exercise 5: Test nearest vertex function`"
-msgstr ":ref:`basic/plpgsql_function:Ejercicio 5: Prueba de la función vértice más cercano`"
+msgstr ""
+":ref:`basic/plpgsql_function:Ejercicio 5: Prueba de la función vértice más "
+"cercano`"
 
 #: ../../build/docs/basic/appendix.rst:293
 msgid "**Exercise**: 6 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 6 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:295
-#, fuzzy
 msgid ":ref:`basic/plpgsql_function:Exercise 6: Creating the main function`"
-msgstr ":ref:`basic/plpgsql_function:Ejercicio 6: Creación de la función principal`"
+msgstr ""
+":ref:`basic/plpgsql_function:Ejercicio 6: Creación de la función principal`"
 
 #: ../../build/docs/basic/appendix.rst:300
 msgid "**Exercise**: 7 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 7 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:302
-#, fuzzy
 msgid ":ref:`basic/plpgsql_function:Exercise 7: Using the main function`"
 msgstr ":ref:`basic/plpgsql_function:Ejercicio 7: Uso de la función principal`"
 
