--- a/locale/es/LC_MESSAGES/basic/data.po
+++ b/locale/es/LC_MESSAGES/basic/data.po
@@ -8,21 +8,21 @@
 # Manuel Retamozo <manuel.retamozo@gmail.com>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # Vicky Vergara <vicky@georepublic.de>, 2022
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-08 16:17+0000\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/basic-data/es/>\n"
 "Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/basic/data.rst:12
@@ -54,7 +54,6 @@ msgid "Supported PostGIS version"
 msgstr "Versión PostGIS compatible"
 
 #: ../../build/docs/basic/data.rst:30
-#, fuzzy
 msgid ""
 "These requirements are met on OSGeoLive. When the required software is "
 "installed, open a terminal window by pressing :code:`ctrl-alt-t` and "
@@ -62,9 +61,9 @@ msgid ""
 "found on :doc:`../general-intro/osgeolive`."
 msgstr ""
 "Estos requisitos se cumplen en OSGeoLive. Cuando se instale el software "
-"necesario, abrir una ventana de terminal presionando :code:`ctrl-alt-t` y"
-" siguir las instrucciones. Se puede encontrar información sobre la "
-"instalación de OSGeoLive en  :doc:`../general-intro/chapter-3`."
+"necesario, abrir una ventana de terminal presionando :code:`ctrl-alt-t` y "
+"siguir las instrucciones. Se puede encontrar información sobre la "
+"instalación de OSGeoLive en :doc:`../general-intro/osgeolive`."
 
 #: ../../build/docs/basic/data.rst:33
 msgid ""
@@ -91,16 +90,14 @@ msgid "Get the Workshop Data"
 msgstr "Obtenga los Datos del Taller"
 
 #: ../../build/docs/basic/data.rst:51
-#, fuzzy
 msgid ""
 "The pgRouting workshop will make use of OpenStreetMap data, which is "
 "already available on `OSGeoLive <http://live.osgeo.org>`_. This workshop "
 "will use the ``Prizren`` city data and is a snapshot of March 2023."
 msgstr ""
-"El taller pgRouting hará uso de los datos de OpenStreetMap, que ya está "
-"disponible en `OSGeoLive <http://live.osgeo.org>`_. Este taller utilizará"
-" los datos de la ciudad de ``Buenos Aires`` y es una instantánea de "
-"Agosto de 2020."
+"El taller pgRouting hará uso de los datos de OpenStreetMap, que ya están "
+"disponibles en `OSGeoLive <https://live.osgeo.org>`_. Este taller utilizará "
+"los datos de la ciudad de ``Prizren`` y es una instantánea de Marzo 2023."
 
 #: ../../build/docs/basic/data.rst:56
 msgid "Getting the data"
@@ -111,13 +108,12 @@ msgid "Option 1) When using OSGeoLive"
 msgstr "Opción 1) Cuando esté usando OSGeoLive"
 
 #: ../../build/docs/basic/data.rst:61
-#, fuzzy
 msgid "OSGeoLive comes with osm data from the city of Prizren."
-msgstr "OSGeoLive viene con datos de osm de la ciudad de Buenos Aires."
+msgstr "OSGeoLive viene con datos de OSM de la ciudad de Prizren."
 
 #: ../../build/docs/basic/data.rst:69
 msgid "Option 2) Download data form OSGeoLive website"
-msgstr "Opción 2) Descargar datos de sitio web de OSGeoLive."
+msgstr "Opción 2) Descargar datos de sitio web de OSGeoLive"
 
 #: ../../build/docs/basic/data.rst:71
 msgid "The exact same data can be found on the OSGeoLive download page."
@@ -130,15 +126,14 @@ msgid "Option 3) Download using Overpass XAPI"
 msgstr "Opción 3) Descargar usando Overpass XAPI"
 
 #: ../../build/docs/basic/data.rst:82
-#, fuzzy
 msgid ""
 "The following downloads the latest OSM data on using the same area. Using"
 " this data in the workshop can generate variations in the results, due to"
 " changes since March 2023."
 msgstr ""
-"A continuación se descargan los datos de OSM más recientes sobre el uso "
-"de la misma área. El uso de estos datos en el taller puede generar "
-"variaciones en los resultados, debido a los cambios desde Agosto de 2020."
+"A continuación se descargan los datos de OSM más recientes sobre el uso de "
+"la misma área. El uso de estos datos en el taller puede generar variaciones "
+"en los resultados, debido a los cambios desde Marzo 2023."
 
 #: ../../build/docs/basic/data.rst:92
 msgid ""
@@ -183,9 +178,8 @@ msgstr ""
 "``mapconfig.xml``"
 
 #: ../../build/docs/basic/data.rst:109
-#, fuzzy
 msgid "and the ``~/Desktop/workshop/Prizren_XK.osm`` data"
-msgstr "y los datos de ``~/Desktop/workshop/BA_AR.osm``"
+msgstr "y los datos de ``~/Desktop/workshop/Prizren_XK.osm``"
 
 #: ../../build/docs/basic/data.rst:110
 msgid "with the ``city_routing`` database"
@@ -193,7 +187,7 @@ msgstr "con la base de datos ``city_routing``"
 
 #: ../../build/docs/basic/data.rst:112
 msgid "From a terminal window :code:`ctrl-alt-t`."
-msgstr "Desde una ventana de terminal  :code:`ctrl-alt-t`."
+msgstr "Desde una ventana de terminal :code:`ctrl-alt-t`."
 
 #: ../../build/docs/basic/data.rst:115
 msgid "Run the osm2pgrouting converter"
@@ -224,7 +218,6 @@ msgid ""
 "OSGeoLive's account name on the database is ``\"user\"``. To easily use "
 "the workshop when not using OSGeoLive this extra steps are needed:"
 msgstr ""
-"El nombre de cuenta de OSGeoLive en la base de datos es  ``\"user\"``. "
-"Para utilizar fácilmente el taller cuando no se utiliza OSGeoLive se "
-"necesitan estos pasos adicionales:"
-
+"El nombre de cuenta de OSGeoLive en la base de datos es ``user``. Para "
+"utilizar fácilmente el taller cuando no se utiliza OSGeoLive se necesitan "
+"estos pasos adicionales:"
