--- a/locale/es/LC_MESSAGES/basic/pedestrian.po
+++ b/locale/es/LC_MESSAGES/basic/pedestrian.po
@@ -7,21 +7,21 @@
 # Translators:
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # Vicky Vergara <vicky@georepublic.de>, 2022
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-08 16:17+0000\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/basic-pedestrian/es/>\n"
 "Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/basic/pedestrian.rst:11
@@ -53,9 +53,9 @@ msgid ""
 "doesn't require other attributes than ``id``, ``source`` and ``target`` "
 "ID and ``cost`` and ``reverse_cost``."
 msgstr ""
-"El algoritmo Dijkstra fue el primer algoritmo implementado en pgRouting. "
-"No requiere otros atributos que no sean  ``id``, ``source`` y ``target`` "
-"ID y ``cost`` y ``reverse_cost``."
+"El algoritmo Dijkstra fue el primer algoritmo implementado en pgRouting. No "
+"requiere otros atributos más que los identificadores ``id``, ``source`` y "
+"``target`` y los pesos ``cost`` y ``reverse_cost``."
 
 #: ../../build/docs/basic/pedestrian.rst:31
 msgid ""
@@ -88,12 +88,11 @@ msgid ""
 " as long as the returned result contains the required number of "
 "attributes and the correct attribute names."
 msgstr ""
-"Muchas funciones pgRouting tienen  ``sql::text`` como uno de sus "
-"argumentos. Aunque esto puede parecer confuso al principio, hace que las "
-"funciones sean muy flexibles, ya que el usuario puede pasar una "
-"instrucción ``SELECT`` como argumento de función siempre y cuando el "
-"resultado devuelto contenga el número necesario de atributos y los "
-"nombres de atributo correctos."
+"Muchas funciones pgRouting tienen ``sql::text`` como uno de sus argumentos. "
+"Aunque esto puede parecer confuso al principio, hace que las funciones sean "
+"muy flexibles, ya que el usuario puede pasar una instrucción ``SELECT`` como "
+"argumento de función siempre y cuando el resultado devuelto contenga el "
+"número necesario de atributos y los nombres correctos."
 
 #: ../../build/docs/basic/pedestrian.rst:56
 msgid "Most of pgRouting implemented algorithms do not require the **geometry**."
@@ -114,7 +113,6 @@ msgid "Identifiers for the Queries"
 msgstr "Identificadores de las consultas"
 
 #: ../../build/docs/basic/pedestrian.rst:62
-#, fuzzy
 msgid ""
 "The assignment of the vertices identifiers on the source and target "
 "columns may be different, the following exercises will use the results of"
@@ -122,12 +120,11 @@ msgid ""
 "are going to be used. These locations are within this area "
 "https://www.openstreetmap.org#map=15/-34.5847/-58.3970"
 msgstr ""
-"La asignación de los identificadores de vértices en las columnas de "
-"origen y destino puede ser diferentes, los siguientes ejercicios usarán "
-"los resultados de esta consulta. Para el taller, se van a utilizar "
-"algunos lugares cercanos al evento FOSS4G Argentina. Estas ubicaciones se"
-" encuentran dentro de esta área "
-"https://www.openstreetmap.org#map=15/-34.5847/-58.3970"
+"La asignación de los identificadores de vértices en las columnas de origen y "
+"destino puede ser diferentes, los siguientes ejercicios usarán los "
+"resultados de esta consulta. Para el taller, se van a utilizar algunos "
+"lugares cercanos al evento FOSS4G. Estas ubicaciones se encuentran dentro de "
+"esta área https://www.openstreetmap.org#map=15/-34.5847/-58.3970"
 
 #: ../../build/docs/basic/pedestrian.rst:67
 msgid "|osmid_1| |place_1|"
@@ -159,23 +156,23 @@ msgstr "Obtener los identificadores de vértice"
 
 #: ../../build/docs/basic/pedestrian.rst:93
 msgid "|osmid_1| |place_1|  (|id_1|)"
-msgstr "|osmid_1| |place_1|  (|id_1|)"
+msgstr "|osmid_1| |place_1| (|id_1|)"
 
 #: ../../build/docs/basic/pedestrian.rst:94
 msgid "|osmid_2| |place_2|  (|id_2|)"
-msgstr "|osmid_2| |place_2|  (|id_2|)"
+msgstr "|osmid_2| |place_2| (|id_2|)"
 
 #: ../../build/docs/basic/pedestrian.rst:95
 msgid "|osmid_3| |place_3|  (|id_3|)"
-msgstr "|osmid_3| |place_3|  (|id_3|)"
+msgstr "|osmid_3| |place_3| (|id_3|)"
 
 #: ../../build/docs/basic/pedestrian.rst:96
 msgid "|osmid_4| |place_4|  (|id_4|)"
-msgstr "|osmid_4| |place_4|  (|id_4|)"
+msgstr "|osmid_4| |place_4| (|id_4|)"
 
 #: ../../build/docs/basic/pedestrian.rst:97
 msgid "|osmid_5| |place_5|  (|id_5|)"
-msgstr "|osmid_5| |place_5|  (|id_5|)"
+msgstr "|osmid_5| |place_5| (|id_5|)"
 
 #: ../../build/docs/basic/pedestrian.rst:100
 msgid ""
@@ -205,22 +202,22 @@ msgstr "Problema:"
 #: ../../build/docs/basic/pedestrian.rst:277
 #: ../../build/docs/basic/pedestrian.rst:314
 msgid "Walking"
-msgstr ""
+msgstr "Caminando"
 
 #: ../../build/docs/basic/pedestrian.rst:113
-#, fuzzy
 msgid "from \"|place_1|\""
-msgstr "|osmid_1| |place_1|"
+msgstr "desde \"|place_1|\""
 
 #: ../../build/docs/basic/pedestrian.rst:114
-#, fuzzy
 msgid "to \"|place_3|\"."
-msgstr "|osmid_3| |place_3|"
+msgstr "hacia \"|place_3|\"."
 
 #: ../../build/docs/basic/pedestrian.rst:116
 #: ../../build/docs/basic/pedestrian.rst:159
 msgid "Calculate routes with costs in *osm2pgRouting* `length` default units."
 msgstr ""
+"Calcular rutas con costos en longitud con unidades por defecto generadoa por "
+"*osm2pgRouting*."
 
 #: ../../build/docs/basic/pedestrian.rst:-1
 msgid "From the |place_1| to the |place_3|"
@@ -263,7 +260,6 @@ msgstr ""
 "los segmentos."
 
 #: ../../build/docs/basic/pedestrian.rst:139
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** Pedestrian)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 1 (**Capítulo:** Peatón)`"
 
@@ -274,11 +270,11 @@ msgid ""
 "``length`` in unit \"degrees\". Cost may be time, distance or any "
 "combination of both or any other attributes or a custom formula."
 msgstr ""
-"El atributo cost devuelto representa el costo especificado en la consulta"
-" SQL interna  (``edges_sql::text`` argument). En este ejemplo, el costo "
-"es ``length`` en la unidad \"degrees\". El costo puede ser tiempo, "
-"distancia o cualquier combinación de ambos o cualquier otro atributo o "
-"una fórmula personalizada."
+"El atributo de costo devuelto representa el costo especificado en la "
+"consulta SQL interna (argumento ``edges_sql::text``). En este ejemplo, el "
+"costo es ``length`` en la unidad \"grados\". El costo puede ser tiempo, "
+"distancia o cualquier combinación de ambos o cualquier otro atributo o una "
+"fórmula personalizada."
 
 #: ../../build/docs/basic/pedestrian.rst:146
 msgid ""
@@ -294,14 +290,12 @@ msgstr "Ejercicio 2: Muchos peatones van al mismo destino"
 
 #: ../../build/docs/basic/pedestrian.rst:156
 #: ../../build/docs/basic/pedestrian.rst:221
-#, fuzzy
 msgid "from \"|place_1|\" and \"|place_2|\""
-msgstr "Desde |place_1| y |place_2| a |place_3|"
+msgstr "desde \"|place_1|\" y \"|place_2|\""
 
 #: ../../build/docs/basic/pedestrian.rst:157
-#, fuzzy
 msgid "to the \"|place_3|\"."
-msgstr "Caminando de \"|place_1|\" al \"|place_3|\"."
+msgstr "hacia el \"|place_3|\"."
 
 #: ../../build/docs/basic/pedestrian.rst:-1
 msgid "From |place_1| and |place_2| to |place_3|"
@@ -320,7 +314,6 @@ msgid "The cost to be in meters using attribute ``length_m`` (line **6**)."
 msgstr "El costo de estar en metros usando el atributo ``length_m`` (línea **6**)."
 
 #: ../../build/docs/basic/pedestrian.rst:180
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** Pedestrian)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 2 (**Capítulo:** Peatón)`"
 
@@ -329,18 +322,16 @@ msgid "Exercise 3: Many Pedestrians departing from the same location"
 msgstr "Ejercicio 3: Muchos peatones que salen de la misma ubicación"
 
 #: ../../build/docs/basic/pedestrian.rst:190
-#, fuzzy
 msgid "from \"|place_3|\""
-msgstr "|osmid_3| |place_3|"
+msgstr "desde \"|place_3|\""
 
 #: ../../build/docs/basic/pedestrian.rst:191
-#, fuzzy
 msgid "to \"|place_1|\" and \"|place_2|\""
-msgstr "Desde |place_1| y |place_2| a |place_3|"
+msgstr "hacia \"|place_1|\" y \"|place_2|\""
 
 #: ../../build/docs/basic/pedestrian.rst:193
 msgid "Calculate routes with costs in seconds."
-msgstr ""
+msgstr "Calcular rutas con costos en segundos."
 
 #: ../../build/docs/basic/pedestrian.rst:200
 msgid "All pedestrians are departing from vertex |id_3| (line **9**)."
@@ -359,7 +350,6 @@ msgstr ""
 " ``t = d/s`` (línea **6**)."
 
 #: ../../build/docs/basic/pedestrian.rst:211
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** Pedestrian)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 3 (**Capítulo:** Peatón)`"
 
@@ -368,13 +358,12 @@ msgid "Exercise 4: Many Pedestrians going to different destinations"
 msgstr "Ejercicio 4: Muchos peatones que van a diferentes destinos"
 
 #: ../../build/docs/basic/pedestrian.rst:222
-#, fuzzy
 msgid "to \"|place_4|\" and \"|place_5|\""
-msgstr "De los hoteles a |place_4| y |place_5|"
+msgstr "hacia \"|place_4|\" y \"|place_5|\""
 
 #: ../../build/docs/basic/pedestrian.rst:224
 msgid "Calculate routes with costs in minutes."
-msgstr ""
+msgstr "Calcular rutas con costos en minutos."
 
 #: ../../build/docs/basic/pedestrian.rst:231
 msgid "The pedestrians depart from |id_1| and |id_2| (line **9**)."
@@ -400,34 +389,28 @@ msgid "Result adds the costs per destination."
 msgstr "El resultado suma los costes por destino."
 
 #: ../../build/docs/basic/pedestrian.rst:245
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** Pedestrian)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 4 (**Capítulo:** Peatón)`"
 
 #: ../../build/docs/scripts/basic/chapter_5/note_1.txt:1
-#, fuzzy
 msgid "Inspecting the results, looking for totals (edge = -1):"
 msgstr "Inspección de los resultados, buscando totales (`edge = -1`):"
 
 #: ../../build/docs/scripts/basic/chapter_5/note_1.txt:3
-#, fuzzy
 msgid "From 3770 to vertex 5912 takes 26.22 minutes (seq = 94)"
-msgstr "desde |id_2| toma 12.06.. minutos (seq = 55)"
+msgstr "Desde 3770 al vértice 5912 toma 26.22 minutos (seq = 94)"
 
 #: ../../build/docs/scripts/basic/chapter_5/note_1.txt:5
-#, fuzzy
 msgid "From 3770 to vertex 3829 takes 7.11 minutes (seq = 48)"
-msgstr "desde |id_2| toma 5.84.. minutos (seq = 74)"
+msgstr "Desde 3770 al vértice 3829 toma 7.11 minutos (seq = 48)"
 
 #: ../../build/docs/scripts/basic/chapter_5/note_1.txt:7
-#, fuzzy
 msgid "From 2592 to vertex 5912 takes 8.31 minutes (seq = 33)"
-msgstr "desde |id_1| toma 8.84.. minutos (seq = 35)"
+msgstr "Desde 2592 al vértice 5912 toma 8.31 minutos (seq = 33)"
 
 #: ../../build/docs/scripts/basic/chapter_5/note_1.txt:9
-#, fuzzy
 msgid "From 2592 to vertex 3829 takes 12.56 minutes (seq = 20)"
-msgstr "desde |id_2| toma 12.06.. minutos (seq = 55)"
+msgstr "Desde 2592 al vértice 3829 toma 12.56 minutos (seq = 20)"
 
 #: ../../build/docs/basic/pedestrian.rst:250
 msgid "pgr_dijkstraCost"
@@ -463,19 +446,17 @@ msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:279
 #: ../../build/docs/basic/pedestrian.rst:316
-#, fuzzy
 msgid "from \"|place_1|\" or \"|place_2|\""
-msgstr "Caminando de \"|place_1|\" al \"|place_3|\"."
+msgstr "desde \"|place_1|\" o \"|place_2|\""
 
 #: ../../build/docs/basic/pedestrian.rst:280
 #: ../../build/docs/basic/pedestrian.rst:317
-#, fuzzy
 msgid "to \"|place_4|\" or \"|place_5|\""
-msgstr "Caminando de \"|place_1|\" al \"|place_3|\"."
+msgstr "desde \"|place_4|\" o \"|place_5|\""
 
 #: ../../build/docs/basic/pedestrian.rst:282
 msgid "Get only the cost in minutes."
-msgstr ""
+msgstr "Obtener solo el costo en minutos."
 
 #: ../../build/docs/basic/pedestrian.rst:-1
 msgid "From the hotels to the |place_4| and |place_5|"
@@ -498,20 +479,18 @@ msgid ""
 "The cost to be in minutes, with a walking speed ``s = 1.3 m/s`` and ``t ="
 " d/s`` (line **7**)."
 msgstr ""
-"El costo a ser en minutos, con una velocidad de caminata ``s = 1.3 m/s`` "
-"y ``t = d/s``  (línea **7**)."
+"El costo a ser en minutos, con una velocidad de caminata ``s = 1.3 m/s`` y ``"
+"t = d/s`` (línea **7**)."
 
 #: ../../build/docs/basic/pedestrian.rst:293
 msgid "Result as aggregated costs."
 msgstr "Resultado como costos agregados."
 
 #: ../../build/docs/basic/pedestrian.rst:304
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** Pedestrian)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 5 (**Capítulo:** Peatón)`"
 
 #: ../../build/docs/basic/pedestrian.rst:306
-#, fuzzy
 msgid ""
 "Compare with `Exercise 4: Many Pedestrians going to different "
 "destinations`_ 's note."
@@ -529,7 +508,7 @@ msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:319
 msgid "Summarize cost in minutes."
-msgstr ""
+msgstr "Reportar costos en minutos."
 
 #: ../../build/docs/basic/pedestrian.rst:325
 msgid ""
@@ -540,16 +519,13 @@ msgstr ""
 "= d/s (línea **7**)."
 
 #: ../../build/docs/basic/pedestrian.rst:337
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** Pedestrian)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 6 (**Capítulo:** Peatón)`"
 
 #: ../../build/docs/scripts/basic/chapter_5/note_2.txt:1
-#, fuzzy
 msgid ""
 "An interpretation of the result can be: In general, it is faster to "
 "depart from \"Qendra Sprotive\" than from \"Nadir Xhemali Danijolli\""
 msgstr ""
-"Una interpretación del resultado puede ser: En general, es más rápido "
-"apartarse de la \"|place_2|\" que de la \"|place_1|\"."
-
+"Una interpretación del resultado puede ser: En general, es más rápido salir "
+"de \"Qendra Sprotive\" que de \"Nadir Xhemali Danijolli\""
