--- a/locale/es/LC_MESSAGES/basic/sql_function.po
+++ b/locale/es/LC_MESSAGES/basic/sql_function.po
@@ -8,21 +8,21 @@
 # Manuel Retamozo <manuel.retamozo@gmail.com>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # Vicky Vergara <vicky@georepublic.de>, 2022
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-08 16:17+0000\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/basic-sql_function/es/>\n"
 "Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/basic/sql_function.rst:12
@@ -71,13 +71,11 @@ msgid "Particular vehicle:"
 msgstr "Vehículo en particular:"
 
 #: ../../build/docs/basic/sql_function.rst:37
-#, fuzzy
 msgid ""
 "Circulate on the whole Prizren area. - Do not use `steps`, `footway`, "
 "`path`."
 msgstr ""
-"Circular por toda la zona de Buenos Aires. - No usar `steps`, `footway`, "
-"`path`."
+"Circular por toda la zona de Prizren. - No usar `steps`, `footway`, `path`."
 
 #: ../../build/docs/basic/sql_function.rst:39
 msgid "Speed is the default speed from OSM information."
@@ -85,7 +83,7 @@ msgstr "La velocidad es la velocidad predeterminada de la información de OSM."
 
 #: ../../build/docs/basic/sql_function.rst:41
 msgid "Taxi vehicle:"
-msgstr " Vehículo Taxi:"
+msgstr "Vehículo Taxi:"
 
 #: ../../build/docs/basic/sql_function.rst:43
 msgid "Circulate on a smaller area near \"|place_4|\"."
@@ -93,14 +91,13 @@ msgstr "Circular en un área más pequeña cerca de \"|place_4|\"."
 
 #: ../../build/docs/basic/sql_function.rst:45
 msgid "Bounding box: ``(20.73,42.20891,20.76,42.23)``"
-msgstr ""
+msgstr "Cuadro delimitador: ``(20.73,42.20891,20.76,42.23)``"
 
 #: ../../build/docs/basic/sql_function.rst:46
 msgid "Do not use `steps`, `footway`, `path`"
 msgstr "No usar `steps`, `footway`, `path`"
 
 #: ../../build/docs/basic/sql_function.rst:48
-#, fuzzy
 msgid "Speed is 10%  faster than the Particular vehicles."
 msgstr "La velocidad es 10% más lenta que la de los vehículos Particulares."
 
@@ -109,9 +106,8 @@ msgid "Pedestrians:"
 msgstr "Peatones:"
 
 #: ../../build/docs/basic/sql_function.rst:52
-#, fuzzy
 msgid "Walk on the whole Prizren area."
-msgstr "Caminar en toda el área de Buenos Aires."
+msgstr "Caminar en toda el área de Prizren."
 
 #: ../../build/docs/basic/sql_function.rst:53
 msgid "Can not circulate on `motorways` and on `primary` segments."
@@ -128,7 +124,7 @@ msgstr "Una interfaz necesita la siguiente información de ruteo:"
 
 #: ../../build/docs/basic/sql_function.rst:57
 msgid "seq - A unique identifier of the rows"
-msgstr "seq - Un identificador único de las filas."
+msgstr "seq - Un identificador único de las filas"
 
 #: ../../build/docs/basic/sql_function.rst:58
 msgid "gid - The segment's identifier"
@@ -245,7 +241,7 @@ msgstr "INTEGER"
 
 #: ../../build/docs/basic/sql_function.rst:88
 msgid "A unique number for each result row."
-msgstr "Un único número para cada fila de resultados "
+msgstr "Un único número para cada fila de resultados."
 
 #: ../../build/docs/basic/sql_function.rst:89
 msgid "id"
@@ -253,7 +249,7 @@ msgstr "id"
 
 #: ../../build/docs/basic/sql_function.rst:89
 msgid "The edge identifier."
-msgstr "El identificador de arista"
+msgstr "El identificador de arista."
 
 #: ../../build/docs/basic/sql_function.rst:90
 msgid "name"
@@ -363,7 +359,7 @@ msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:112
 msgid "Exclude `steps`, `footway`, `path` segments."
-msgstr "Excluir los segmentos de `camino peatonal`, `senda`, `caminitos` "
+msgstr "Excluir los segmentos de `camino peatonal`, `senda`, `caminitos`."
 
 #: ../../build/docs/basic/sql_function.rst:113
 #: ../../build/docs/basic/sql_function.rst:218
@@ -419,7 +415,7 @@ msgstr "``cost`` y ``reverse_cost`` son en términos de segundos. (línea **7**)
 
 #: ../../build/docs/basic/sql_function.rst:128
 msgid "The additional parameters `length_m` and `the_geom`. (line **8**)"
-msgstr "Los parámetros adicionales  `length_m` y `the_geom`. (línea **8**)"
+msgstr "Los parámetros adicionales `length_m` y `the_geom`. (línea **8**)"
 
 #: ../../build/docs/basic/sql_function.rst:129
 msgid "``JOIN`` with the `configuration`:"
@@ -452,7 +448,6 @@ msgid "Count the rows on the view ``vehicle_net`` (line **2**)"
 msgstr "Contar las filas en la vista ``vehicle_net`` (línea **2**)"
 
 #: ../../build/docs/basic/sql_function.rst:155
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** SQL)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 1 (**Capítulo:** SQL)`"
 
@@ -469,18 +464,19 @@ msgid "Create a view ``taxi_net`` for the `taxi`:"
 msgstr "Cree una vista ``taxi_net`` para el `taxi`:"
 
 #: ../../build/docs/basic/sql_function.rst:169
-#, fuzzy
 msgid ""
 "The taxi can only circulate inside this Bounding Box: "
 "``(20.73,42.20891,20.76,42.23)``"
 msgstr ""
-"El taxi solo puede circular dentro de este delimitador: "
-"``(-58.41,-34.58,-58.37,-34.55)``"
+"El taxi solo puede circular dentro de este delimitador: ``(20.73,42.20891,20."
+"76,42.23)``"
 
 #: ../../build/docs/basic/sql_function.rst:170
-#, fuzzy, python-format
+#, python-format
 msgid "The taxi speed is 10% faster than the particular vehicle."
-msgstr "La velocidad del taxi es un 10% más lenta que el vehículo en particular."
+msgstr ""
+"La velocidad del taxi es un 10 por ciento más rápida que el vehículo en "
+"particular."
 
 #: ../../build/docs/basic/sql_function.rst:172
 msgid "Verify the reduced number of road segments."
@@ -495,13 +491,12 @@ msgstr ""
 "**9**)"
 
 #: ../../build/docs/basic/sql_function.rst:179
-#, fuzzy
 msgid ""
 "Can only circulate inside the bounding box: "
 "``(20.73,42.20891,20.76,42.23)``. (line **10**)"
 msgstr ""
-"Sólo puede circular dentro del cuadro delimitador:  "
-"``(-58.41,-34.58,-58.37,-34.55)``. (línea **10**)"
+"Sólo puede circular dentro del cuadro delimitador: ``(20.73,42.20891,20.76,42"
+".23)``. (línea **10**)"
 
 #: ../../build/docs/basic/sql_function.rst:180
 #, python-format
@@ -509,15 +504,14 @@ msgid ""
 "Adjust the taxi's ``cost`` and ``reverse_cost`` to be 90% of the "
 "particular vehicle. (line **7**)"
 msgstr ""
-"Ajuste el ``cost`` y ``reverse_cost`` del taxi para que sea el 90% del "
-"vehículo en particular. (línea **7**)"
+"Ajustar el ``cost`` y ``reverse_cost`` del taxi para que sea el 90 por "
+"ciento del vehículo en particular. (línea **7**)"
 
 #: ../../build/docs/basic/sql_function.rst:191
 msgid "Count the rows on the original ``taxi_net``"
-msgstr "Cuente las filas en el ``taxi_net`` original."
+msgstr "Contar las filas en el ``taxi_net`` original"
 
 #: ../../build/docs/basic/sql_function.rst:201
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** SQL)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 2 (**Capítulo:** SQL)`"
 
@@ -536,9 +530,8 @@ msgstr ""
 " procesar peatones."
 
 #: ../../build/docs/basic/sql_function.rst:217
-#, fuzzy
 msgid "Exclude `motorway` , `primary` and `secondary` segments."
-msgstr "Excluir segmentos `de autopista` y `primarios`."
+msgstr "Excluir segmentos `motorway` , `primary` y `secondary`."
 
 #: ../../build/docs/basic/sql_function.rst:229
 msgid "Similar to `Exercise 1: Creating a view for routing`_:"
@@ -549,20 +542,18 @@ msgid ""
 "The ``cost`` and ``reverse_cost`` are in terms of seconds with speed of "
 "``2 mts/sec``. (line **7**)"
 msgstr ""
-"``cost`` y ``reverse_cost``  se expresan en términos de segundos con "
+"``cost`` y ``reverse_cost`` se expresan en términos de segundos con "
 "velocidad de ``2 mts/sec``. (línea **7**)"
 
 #: ../../build/docs/basic/sql_function.rst:232
-#, fuzzy
 msgid "Exclude `motorway`, `primary` and `secondary` . (line **11**)"
-msgstr "Excluir `autopista`, `primaria`. (línea **11**)"
+msgstr "Excluir `motorway`, `primary` y `secondary`. (línea **11**)"
 
 #: ../../build/docs/basic/sql_function.rst:243
 msgid "Count the rows on the view ``walk_net`` (line **1**)"
 msgstr "Cuente las filas de la vista ``walk_net`` (line **1**)"
 
 #: ../../build/docs/basic/sql_function.rst:253
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** SQL)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 3 (**Capítulo:** SQL)`"
 
@@ -583,11 +574,11 @@ msgid "In particular:"
 msgstr "En particular:"
 
 #: ../../build/docs/basic/sql_function.rst:269
-#, fuzzy
 msgid ""
 "From the \"|ch7_place_1|\" to the \"|ch7_place_2|\" using the OSM "
 "identifier"
-msgstr "Desde \"|place_3|\" hacia \"|place_1|\" usando el identificador OSM"
+msgstr ""
+"Desde \"|ch7_place_1|\" hacia \"|ch7_place_2|\" usando el identificador OSM"
 
 #: ../../build/docs/basic/sql_function.rst:270
 msgid "the views to be tested are:"
@@ -630,14 +621,14 @@ msgid "In general"
 msgstr "En general"
 
 #: ../../build/docs/basic/sql_function.rst:286
-#, fuzzy
 msgid "The departure is |ch7_place_1| with OSM identifier |ch7_osmid_1|."
-msgstr "El punto de partida es \"|place_3|\" con el identificador OSM |osmid_3|."
+msgstr ""
+"El punto de partida es \"|ch7_place_1|\" con el identificador OSM "
+"|ch7_osmid_1|."
 
 #: ../../build/docs/basic/sql_function.rst:287
-#, fuzzy
 msgid "The destination is |ch7_place_2| with OSM identifier |ch7_osmid_2|."
-msgstr "El destino es \"|place_1|\" con el identificador OSM |osmid_1|."
+msgstr "El destino es \"|ch7_place_2|\" con el identificador OSM |ch7_osmid_2|."
 
 #: ../../build/docs/basic/sql_function.rst:289
 msgid "For ``vehicle_net``:"
@@ -678,13 +669,12 @@ msgid "Similar as the previous one but with ``taxi_net``. (line **3**)"
 msgstr "Similar al anterior pero con ``taxi_net`` (línea **3**)"
 
 #: ../../build/docs/basic/sql_function.rst:309
-#, fuzzy
 msgid ""
 "The results give the same route as with ``vehicle_net`` but ``cost`` is "
 "lower"
 msgstr ""
-"Los resultados dan la misma ruta que con ``vehicle_net`` pero ``cost`` es"
-" mayor"
+"Los resultados dan la misma ruta que con ``vehicle_net`` pero ``cost`` es "
+"menor"
 
 #: ../../build/docs/basic/sql_function.rst:318
 msgid "For ``walk_net``:"
@@ -692,7 +682,7 @@ msgstr "Para ``walk_net``:"
 
 #: ../../build/docs/basic/sql_function.rst:320
 msgid "Similar as the previous one but with ``walk_net``. (line **3**)"
-msgstr "Similar al anterior pero con  ``walk_net``. (línea **3**)"
+msgstr "Similar al anterior pero con ``walk_net``. (línea **3**)"
 
 #: ../../build/docs/basic/sql_function.rst:321
 msgid "The results give a different route than of the vehicles."
@@ -706,12 +696,10 @@ msgid ""
 " views."
 msgstr ""
 "De estas consultas, se puede deducir que lo que diseñamos para una vista "
-"funcionará para las otras vistas. En los siguientes ejercicios solo se "
-"usará  ``vehicle_net``,  pero puede probar las consultas con las otras "
-"vistas."
+"funcionará para las otras vistas. En los siguientes ejercicios solo se usará "
+"``vehicle_net``, pero puede probar las consultas con las otras vistas."
 
 #: ../../build/docs/basic/sql_function.rst:337
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** SQL)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 4 (**Capítulo:** SQL)`"
 
@@ -724,9 +712,9 @@ msgid "Route showing names"
 msgstr "Ruta que muestra nombres"
 
 #: ../../build/docs/basic/sql_function.rst:350
-#, fuzzy
 msgid "From |ch7_place_1| to |ch7_place_2|, using OSM identifiers."
-msgstr "Desde |place_3| hasta |place_1|, utilizando identificadores OSM."
+msgstr ""
+"Desde |ch7_place_1| hasta |ch7_place_2|, utilizando identificadores OSM."
 
 #: ../../build/docs/basic/sql_function.rst:351
 msgid ""
@@ -783,7 +771,6 @@ msgstr ""
 "en ``vehicle_net``"
 
 #: ../../build/docs/basic/sql_function.rst:379
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** SQL)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 5 (**Capítulo:** SQL)`"
 
@@ -797,16 +784,15 @@ msgstr "Ejercicio 6: Geometría de la ruta (legible para humanos)"
 
 #: ../../build/docs/basic/sql_function.rst:-1
 msgid "From |ch7_place_1| to |ch7_place_2|"
-msgstr ""
+msgstr "Desde |ch7_place_1| hasta |ch7_place_2|"
 
 #: ../../build/docs/basic/sql_function.rst:397
-#, fuzzy
 msgid ""
 "From the |ch7_place_1| to the |ch7_place_2|, additionally get the "
 "geometry in human readable form."
 msgstr ""
-"Desde \"|place_3|\" hasta \"|place_1|\", además, se obtiene la geometría "
-"en forma legible por humanos."
+"Desde \"|ch7_place_1|\" hasta \"|ch7_place_2|\", además, se obtiene la "
+"geometría en forma legible por humanos."
 
 #: ../../build/docs/basic/sql_function.rst:400
 #: ../../build/docs/basic/sql_function.rst:447
@@ -869,7 +855,6 @@ msgid "Like before ``LEFT JOIN`` with ``vehicle_net``. (line **11**)"
 msgstr "Como antes ``LEFT JOIN`` con ``vehicle_net``. (línea **11**)"
 
 #: ../../build/docs/basic/sql_function.rst:432
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** SQL)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 6 (**Capítulo:** SQL)`"
 
@@ -878,14 +863,14 @@ msgid "Exercise 7: Route geometry (binary format)"
 msgstr "Ejercicio 7: Geometría de ruta (formato binario)"
 
 #: ../../build/docs/basic/sql_function.rst:-1
-#, fuzzy
 msgid "From |ch7_place_1| to |ch7_place_2| showing arrows."
-msgstr "Desde |place_3| al |place_1| mostrando flechas."
+msgstr "Desde |ch7_place_1| al |ch7_place_2| mostrando flechas."
 
 #: ../../build/docs/basic/sql_function.rst:445
-#, fuzzy
 msgid "From the |ch7_place_1| to |ch7_place_2|, the geometry in binary format."
-msgstr "Desde \"|place_3|\" hasta \"|place_1|\", la geometría en formato binario."
+msgstr ""
+"Desde \"|ch7_place_1|\" hasta \"|ch7_place_2|\", la geometría en formato "
+"binario."
 
 #: ../../build/docs/basic/sql_function.rst:450
 #: ../../build/docs/basic/sql_function.rst:510
@@ -903,7 +888,6 @@ msgid "The ``the_geom`` including the renaming (line **9**)"
 msgstr "``the_geom``, incluido el cambio de nombre (línea **9**)"
 
 #: ../../build/docs/basic/sql_function.rst:470
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 7 (**Chapter:** SQL)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 7 (**Capítulo:** SQL)`"
 
@@ -947,7 +931,7 @@ msgstr "Las líneas **2** y **3** no coinciden con ese criterio"
 
 #: ../../build/docs/basic/sql_function.rst:504
 msgid "From |ch7_place_1| to |ch7_place_2|,"
-msgstr ""
+msgstr "Desde |ch7_place_1| hasta |ch7_place_2|,"
 
 #: ../../build/docs/basic/sql_function.rst:511
 msgid "Both columns must have the geometry fixed for directionality."
@@ -1010,7 +994,6 @@ msgid "The geometry when ``node`` is the ``source`` column. (line **17**)"
 msgstr "La geometría cuando ``node`` es la columna ``source``. (línea **17**)"
 
 #: ../../build/docs/basic/sql_function.rst:540
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 8 (**Chapter:** SQL)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 8 (**Capítulo:** SQL)`"
 
@@ -1019,9 +1002,8 @@ msgid "Exercise 9: Using the geometry"
 msgstr "Ejercicio 9: Uso de la geometría"
 
 #: ../../build/docs/basic/sql_function.rst:-1
-#, fuzzy
 msgid "From |ch7_place_1| to the |ch7_place_2| show azimuth"
-msgstr "Desde |place_3| al |place_1| mostrar el azimut"
+msgstr "Desde |ch7_place_1| al |ch7_place_2| mostrar el azimut"
 
 #: ../../build/docs/basic/sql_function.rst:552
 msgid ""
@@ -1088,7 +1070,6 @@ msgid "Calculates the azimuth of ``route_geom``. (line **26**)"
 msgstr "Calcula el azimut de ``route_geom``. (línea **26**)"
 
 #: ../../build/docs/basic/sql_function.rst:589
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 9 (**Chapter:** SQL)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 9 (**Capítulo:** SQL)`"
 
@@ -1199,7 +1180,6 @@ msgstr ""
 "subconjunto de ``ways`` (línea **25**)"
 
 #: ../../build/docs/basic/sql_function.rst:652
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 10 (**Chapter:** SQL)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 10 (**Capítulo:** SQL)`"
 
@@ -1212,9 +1192,9 @@ msgid "Test the function with the three views"
 msgstr "Probar la función con las tres vistas"
 
 #: ../../build/docs/basic/sql_function.rst:662
-#, fuzzy
 msgid "From the \"|ch7_place_1|\" to the |ch7_place_2| using the OSM identifier"
-msgstr "Desde \"|place_3|\" hacia |place_1| utilizando el identificador OSM"
+msgstr ""
+"Desde \"|ch7_place_1|\" hacia |ch7_place_2| utilizando el identificador OSM"
 
 #: ../../build/docs/basic/sql_function.rst:666
 msgid "Use the function on the ``SELECT`` statement"
@@ -1225,7 +1205,6 @@ msgid "The first parameter changes based on the view to be tested"
 msgstr "El primer parámetro cambia en función de la vista que se va a probar"
 
 #: ../../build/docs/basic/sql_function.rst:674
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 11 (**Chapter:** SQL)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 11 (**Capítulo:** SQL)`"
 
@@ -1256,4 +1235,3 @@ msgstr "|osmid_4| |place_4|"
 #: ../../build/docs/basic/sql_function.rst:684
 msgid "|osmid_5| |place_5|"
 msgstr "|osmid_5| |place_5|"
-
