--- a/locale/es/LC_MESSAGES/examples/hanoslav.po
+++ b/locale/es/LC_MESSAGES/examples/hanoslav.po
@@ -7,25 +7,26 @@
 # Translators:
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # 
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-10 17:38+0000\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: MarPetra <mvergaratrejo@gmail.com>, 2021\n"
-"Language-Team: Spanish (https://www.transifex.com/pgrouting/teams/1219/es/)\n"
+"PO-Revision-Date: 2024-03-19 05:57+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/examples-hanoslav/es/>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.9.1\n"
-"Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../../build/docs/examples/hanoslav.rst:11
 msgid "Internet Examples"
-msgstr "Ejemplos de Internet"
+msgstr "Ejemplos del Internet"
 
 #: ../../build/docs/examples/hanoslav.rst:14
 msgid "Hanoslav Example"
