--- a/locale/es/LC_MESSAGES/general-intro/introduction.po
+++ b/locale/es/LC_MESSAGES/general-intro/introduction.po
@@ -7,21 +7,21 @@
 # Translators:
 # Vicky Vergara <vicky@georepublic.de>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-20 15:37-0600\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: MarPetra <mvergaratrejo@gmail.com>, 2021\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/general-intro-introduction/es/>\n"
 "Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/general-intro/introduction.rst:11
@@ -44,7 +44,7 @@ msgstr ""
 
 #: ../../build/docs/general-intro/introduction.rst:20
 msgid "Basic"
-msgstr ""
+msgstr "Básico"
 
 #: ../../build/docs/general-intro/introduction.rst:22
 #, fuzzy
@@ -72,9 +72,8 @@ msgid "Creating a routing topology."
 msgstr "Creación de una topología de ruteo."
 
 #: ../../build/docs/general-intro/introduction.rst:30
-#, fuzzy
 msgid "Importing |osm-web| road network data."
-msgstr "Importación de |osm-web| datos de la red de carreteras."
+msgstr "Importación de |osm-web| de la red de carreteras."
 
 #: ../../build/docs/general-intro/introduction.rst:31
 msgid "Using pgRouting algorithms."
@@ -85,11 +84,9 @@ msgid "Writing advanced queries."
 msgstr "Escribir consultas avanzadas."
 
 #: ../../build/docs/general-intro/introduction.rst:33
-#, fuzzy
 msgid "Writing a custom PostgreSQL stored procedure in `plpgsql`"
 msgstr ""
-"Escribir un procedimiento almacenado PostgreSQL personalizado en "
-"'plpgsql'."
+"Escribir un procedimiento almacenado PostgreSQL personalizado en `plpgsql`"
 
 #: ../../build/docs/general-intro/introduction.rst:36
 #: ../../build/docs/general-intro/introduction.rst:49
@@ -97,26 +94,22 @@ msgid "Prerequisites"
 msgstr "Pre-requisitos"
 
 #: ../../build/docs/general-intro/introduction.rst:37
-#, fuzzy
 msgid "Workshop level: basic."
-msgstr "Nivel de taller: intermedio."
+msgstr "Nivel de taller: Básico."
 
 #: ../../build/docs/general-intro/introduction.rst:38
-#, fuzzy
 msgid "Previous knowledge: SQL (PostgreSQL, PostGIS)"
-msgstr "Conocimiento previo del asistente: SQL (PostgreSQL, PostGIS)"
+msgstr "Conocimiento previo: SQL (PostgreSQL, PostGIS)"
 
 #: ../../build/docs/general-intro/introduction.rst:39
 #: ../../build/docs/general-intro/introduction.rst:52
-#, fuzzy
 msgid "Equipments: `OSGeoLive <https://live.osgeo.org>`__ (16.0)"
 msgstr ""
-"Equipamientos: Este taller utiliza `OSGeoLive <https://live.osgeo.org>`__"
-" (14.0)"
+"Equipos: Este taller utiliza `OSGeoLive <https://live.osgeo.org>`__ (16.0)"
 
 #: ../../build/docs/general-intro/introduction.rst:42
 msgid "Advanced"
-msgstr ""
+msgstr "Avanzado"
 
 #: ../../build/docs/general-intro/introduction.rst:44
 msgid ""
@@ -127,21 +120,18 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/general-intro/introduction.rst:50
-#, fuzzy
 msgid "Workshop level: Advanced."
-msgstr "Nivel de taller: intermedio."
+msgstr "Nivel de taller: Avanzado."
 
 #: ../../build/docs/general-intro/introduction.rst:51
-#, fuzzy
 msgid "Previous knowledge: SQL (PostgreSQL, PostGIS, pgRouting)"
-msgstr "Conocimiento previo del asistente: SQL (PostgreSQL, PostGIS)"
+msgstr "Conocimiento previo : SQL (PostgreSQL, PostGIS, pgRouting)"
 
 #: ../../build/docs/general-intro/introduction.rst:55
 msgid "Aknowledments"
 msgstr ""
 
 #: ../../build/docs/general-intro/introduction.rst:58
-#, fuzzy
 msgid "Sponsored by"
 msgstr "Apoyado por"
 
@@ -154,14 +144,13 @@ msgid "Developers & presenters of FOSS4G Prizren workshop:"
 msgstr ""
 
 #: ../../build/docs/general-intro/introduction.rst:65
-#, fuzzy
 msgid ""
 "*Vicky Vergara* Is a freelance developer from Mexico. She's the core "
 "developer of pgRouting project and GSoC Mentor. OSGeo Charter member."
 msgstr ""
-"*Vicky Vergara* trabaja en `Georepublic <https://georepublic.info>` _, en"
-" México. Ella es la desarrolladora principal del proyecto pgRouting y "
-"GSoC Mentor. Miembro Fundador de OSGeo."
+"*Vicky Vergara* Es un desarrollador freelance de México. Es la "
+"desarrolladora principal del proyecto pgRouting y es tutora de GSoC. Miembro "
+"de OSGeo."
 
 #: ../../build/docs/general-intro/introduction.rst:68
 msgid ""
@@ -184,7 +173,6 @@ msgid "Past and present supporters"
 msgstr ""
 
 #: ../../build/docs/general-intro/introduction.rst:86
-#, fuzzy
 msgid "Georepublic, Paragon Corporation"
 msgstr "Paragon Corporation"
 
@@ -197,9 +185,8 @@ msgid ""
 "This work is licensed under a `Creative Commons Attribution-Share Alike "
 "3.0 License <https://creativecommons.org/licenses/by-sa/3.0/>`_."
 msgstr ""
-"Esta obra está autorizada bajo una licencia  `Creative Commons "
-"Attribution-Share Alike 3.0 License <https://creativecommons.org/licenses"
-"/by-sa/3.0/>`_."
+"Esta obra está autorizada bajo una licencia `Creative Commons Attribution-"
+"Share Alike 3.0 License <https://creativecommons.org/licenses/by-sa/3.0/>`_."
 
 #: ../../build/docs/general-intro/introduction.rst:97
 msgid "Become a sponsor"
@@ -216,4 +203,3 @@ msgstr ""
 #: ../../build/docs/general-intro/introduction.rst:-1
 msgid "OSGeo Foundation"
 msgstr ""
-
