--- a/locale/es/LC_MESSAGES/general-intro/overview.po
+++ b/locale/es/LC_MESSAGES/general-intro/overview.po
@@ -4,20 +4,21 @@
 # Prizren package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-08 16:17+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/general-intro-overview/es/>\n"
 "Language: es\n"
-"Language-Team: es <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/general-intro/overview.rst:11
@@ -34,7 +35,7 @@ msgstr ""
 
 #: ../../build/docs/general-intro/overview.rst:24
 msgid "Chapter Contents"
-msgstr ""
+msgstr "Contenido del Capítulo"
 
 #: ../../build/docs/general-intro/overview.rst:27
 msgid "pgRouting Overview"
@@ -233,4 +234,3 @@ msgstr ""
 #: ../../build/docs/general-intro/overview.rst:118
 msgid "https://www.openstreetmap.org"
 msgstr ""
-
