--- a/locale/es/LC_MESSAGES/interactions/chapter-10.po
+++ b/locale/es/LC_MESSAGES/interactions/chapter-10.po
@@ -8,21 +8,22 @@
 # Vicky Vergara <vicky@georepublic.de>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # 
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-10 17:38+0000\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: MarPetra <mvergaratrejo@gmail.com>, 2021\n"
-"Language-Team: Spanish (https://www.transifex.com/pgrouting/teams/1219/es/)\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/interactions-chapter-10/es/>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.9.1\n"
-"Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../../build/docs/interactions/chapter-10.rst:13
 msgid "WMS server with GeoServer"
@@ -43,7 +44,7 @@ msgid ""
 "then you have GeoServer installed already."
 msgstr ""
 "La instalación de GeoServer está fuera del alcance de este taller, pero si "
-"está utilizando el  `OSGeo Live <http://live.osgeo.org>`_ para este taller, "
+"está utilizando el `OSGeo Live <https://live.osgeo.org>`_ para este taller, "
 "entonces ya tiene GeoServer instalado."
 
 #: ../../build/docs/interactions/chapter-10.rst:23
@@ -57,10 +58,10 @@ msgid ""
 " open the *Applications* menu on the desktop and then *Geospatial* > *Web "
 "Services* > *GeoServer* > *Start GeoServer*."
 msgstr ""
-"Para crear la capa WMS, necesitamos conectarnos a la interfaz de "
-"administración de GeoServer. En el escritorio de  `OSGeo LiveDVD "
-"<http://live.osgeo.org>`_ abra el menú *Aplicaciones* en el escritorio y, a "
-"continuación, Servicios Web* > *GeoServer* > *Start GeoServer*."
+"Para crear la capa WMS, se necesita conectara la interfaz de administración "
+"de GeoServer. En el escritorio de `OSGeoLive <https://live.osgeo.org>`_ "
+"abrir el menú *Aplicaciones* en el escritorio y, a continuación, Servicios "
+"Web* > *GeoServer* > *Start GeoServer*."
 
 #: ../../build/docs/interactions/chapter-10.rst:29
 msgid ""
