--- a/locale/es/LC_MESSAGES/interactions/chapter-11.po
+++ b/locale/es/LC_MESSAGES/interactions/chapter-11.po
@@ -7,21 +7,21 @@
 # Translators:
 # Vicky Vergara <vicky@georepublic.de>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-20 15:37-0600\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: MarPetra <mvergaratrejo@gmail.com>, 2021\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/interactions-chapter-11/es/>\n"
 "Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/interactions/chapter-11.rst:13
@@ -70,9 +70,9 @@ msgid ""
 "object, which is an instance of the ``ol.Map`` class. Then, data layers "
 "and controls can be added to that map object."
 msgstr ""
-"Crear un mapa openlayers en una página web implica crear un objeto *map*,"
-" que es una instancia de la clase de mapa  ``ol.Map``. Posteriormente, se"
-" pueden agregar capas y controles de datos a ese objeto de mapa."
+"Crear un mapa openlayers en una página web implica crear un objeto *map*, "
+"que es una instancia de la clase de mapa ``ol.Map``. Posteriormente, se "
+"pueden agregar capas y controles de datos a ese objeto de mapa."
 
 #: ../../build/docs/interactions/chapter-11.rst:35
 #, fuzzy
@@ -187,11 +187,11 @@ msgid ""
 "configured with a *view* instance (of the ``ol.View`` class) with "
 "predefined values for the *center* and the *zoom* level."
 msgstr ""
-"Este código crea un  ``ol.Map`` instancia cuyo ``target`` es el elemento "
-"DOM ``map`` en la página HTML. El mapa se configura con una *capa de "
-"teselas*, configurada con una *fuente* OpenStreetMap . El mapa también se"
-" configura con una instancia de *vista* (de la clase ``ol.View`` ) con "
-"valores predefinidos para el *centro* y el nivel de  *zoom*."
+"Este código crea un ``ol.Map`` instancia cuyo ``target`` es el elemento DOM "
+"``map`` en la página HTML. El mapa se configura con una *capa de teselas*, "
+"configurada con una *fuente* OpenStreetMap . El mapa también se configura "
+"con una instancia de *vista* (de la clase ``ol.View`` ) con valores "
+"predefinidos para el *centro* y el nivel de *zoom*."
 
 #: ../../build/docs/interactions/chapter-11.rst:103
 msgid "WMS GET parameters"
@@ -350,4 +350,3 @@ msgid ""
 msgstr ""
 "Ahora copie el siguiente código de aplicación final en un archivo, al que"
 " puede acceder un servidor web, como Apache o Nginx, por ejemplo:"
-
