--- a/locale/es/LC_MESSAGES/interactions/chapter-9.po
+++ b/locale/es/LC_MESSAGES/interactions/chapter-9.po
@@ -7,21 +7,22 @@
 # Translators:
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # 
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-10 17:38+0000\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: MarPetra <mvergaratrejo@gmail.com>, 2021\n"
-"Language-Team: Spanish (https://www.transifex.com/pgrouting/teams/1219/es/)\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/interactions-chapter-9/es/>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.9.1\n"
-"Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../../build/docs/interactions/chapter-9.rst:12
 msgid "Using Qgis"
@@ -102,7 +103,7 @@ msgstr "**Nombre**      city_routing"
 
 #: ../../build/docs/interactions/chapter-9.rst:71
 msgid "**Host**       localhost"
-msgstr "**Host**       localhost"
+msgstr ":Host: localhost"
 
 #: ../../build/docs/interactions/chapter-9.rst:73
 msgid "**Port**       5432"
@@ -114,7 +115,7 @@ msgstr "**Base de datos** city_routing"
 
 #: ../../build/docs/interactions/chapter-9.rst:77
 msgid "**User name**  user"
-msgstr "**Nombre de usuario** usuario"
+msgstr "**Nombre de usuario** user"
 
 #: ../../build/docs/interactions/chapter-9.rst:79
 msgid "**Password**   user"
@@ -187,8 +188,8 @@ msgid ""
 "Choose a formmated layer and :menuselection:`Right click --> Styles --> Copy"
 " Styles`"
 msgstr ""
-"Elija una capa formmated y :menuselection: :menuselection:`Clic derecho --> "
-"Estilos --> Copiar Estilos`"
+"Elejir una capa formateada y :menuselection:`Clic derecho --> Estilos --> "
+"Copiar Estilos`"
 
 #: ../../build/docs/interactions/chapter-9.rst:133
 msgid ""
