--- a/locale/es/LC_MESSAGES/un_sdg/data.po
+++ b/locale/es/LC_MESSAGES/un_sdg/data.po
@@ -7,21 +7,21 @@
 # Translators:
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # Vicky Vergara <vicky@georepublic.de>, 2022
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-08 16:17+0000\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/un_sdg-data/es/>\n"
 "Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/un_sdg/data.rst:11
@@ -65,7 +65,6 @@ msgid "Supported PostGIS version"
 msgstr "Versión PostGIS compatible"
 
 #: ../../build/docs/un_sdg/data.rst:38
-#, fuzzy
 msgid ""
 "These requirements are met on OSGeoLive. When the required software is "
 "installed, open a terminal window by pressing ``ctrl-alt-t`` and follow "
@@ -73,10 +72,9 @@ msgid ""
 " :doc:`../general-intro/osgeolive` of this workshop."
 msgstr ""
 "Estos requisitos se cumplen en OSGeoLive. Cuando se instale el software "
-"requerido, abra una ventana de terminal presionando ``ctrl-alt-t`` y siga"
-" las instrucciones.  La información sobre la instalación de OSGeoLive se "
-"puede encontrar en :ref:`general-intro/chapter-3:Instalación` de este "
-"taller."
+"requerido, abra una ventana de terminal presionando ``ctrl-alt-t`` y siga "
+"las instrucciones. La información sobre la instalación de OSGeoLive se puede "
+"encontrar en :ref:`general-intro/chapter-3:Instalación` de este taller."
 
 #: ../../build/docs/un_sdg/data.rst:43
 msgid ""
@@ -107,7 +105,7 @@ msgid ""
 "for each table."
 msgstr ""
 "Después de conectarse a la base de datos, el primer paso es crear "
-"``EXTENSION``  para habilitar pgRouting y PostGIS en la base de datos. A "
+"``EXTENSION`` para habilitar pgRouting y PostGIS en la base de datos. A "
 "continuación, agregue el `SCHEMA`` para cada tabla."
 
 #: ../../build/docs/un_sdg/data.rst:73
@@ -179,11 +177,10 @@ msgid ""
 "with pgRouting. See :doc:`../appendix/appendix-3` for additional "
 "information about ``osm2pgrouting``."
 msgstr ""
-"El siguiente paso es ejecutar el convertidor ``osm2pgrouting'', que es "
-"una herramienta de línea de comandos que inserta los datos en la base de "
-"datos, \"listo\" para ser utilizado con pgRouting. Puede encontrar "
-"información adicional sobre ``osm2pgrouting`` en "
-":doc:`../appendix/appendix-3`"
+"El siguiente paso es ejecutar el convertidor ``osm2pgrouting'', que es una "
+"herramienta de línea de comandos que inserta los datos en la base de datos, "
+"\"listo\" para ser utilizado con pgRouting. Puede encontrar información "
+"adicional sobre ``osm2pgrouting`` en :doc:`../appendix/appendix-3`."
 
 #: ../../build/docs/un_sdg/data.rst:113 ../../build/docs/un_sdg/data.rst:244
 msgid "For this step the following is used:"
@@ -327,7 +324,6 @@ msgstr ""
 "Munshigang, Bangladesh."
 
 #: ../../build/docs/un_sdg/data.rst:235
-#, fuzzy
 msgid "See  :ref:`basic/data:Option 3) Download using Overpass XAPI`"
 msgstr "Ver :ref:`basic/data:Opción 3) Descargar usando Overpass XAPI`"
 
@@ -380,4 +376,3 @@ msgstr "Información de configuración para edificios"
 #: ../../build/docs/un_sdg/data.rst:296
 msgid "Configuration information for Waterways"
 msgstr "Información de configuración para vías navegables"
-
