--- a/locale/es/LC_MESSAGES/un_sdg/sdg11-cities.po
+++ b/locale/es/LC_MESSAGES/un_sdg/sdg11-cities.po
@@ -7,21 +7,21 @@
 # Translators:
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # Vicky Vergara <vicky@georepublic.de>, 2022
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-04 11:02-0600\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/un_sdg-sdg11-cities/es/>\n"
 "Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:11
@@ -63,7 +63,7 @@ msgstr "Contenido del Capítulo"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:31
 msgid "Problem: City getting affected by rain or not"
-msgstr "Problema: Ciudad afectada por la lluvia o no?"
+msgstr "Problema: Ciudad afectada por la lluvia o no"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:33
 msgid "**Problem Statement**"
@@ -138,9 +138,8 @@ msgid "Exercise 1: Create a point for the city"
 msgstr "Ejercicio 1: Crear un punto para la ciudad"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:78
-#, fuzzy
 msgid ":ref:`un_sdg/appendix:**Exercise:** 1 (**Chapter:** SDG 11)`"
-msgstr ":ref:`**Ejercicio:** 1 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 1 (**Capítulo:** ODS 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:80
 msgid ""
@@ -149,10 +148,10 @@ msgid ""
 "values. ``ST_SetSRID`` is used to set the SRID (Spatial Reference "
 "Identifier) on the point geometry to ``4326``."
 msgstr ""
-"Los valores de latitud y longitud se convierten en  ``geometry``  usando "
+"Los valores de latitud y longitud se convierten en ``geometry`` usando "
 "``ST_Point`` que devuelve un punto con los valores de coordenadas X e Y "
-"dados. ``ST_SetSRID`` se utiliza para establecer el SRID (Identificado de"
-" referencia Espacial) en la geometría del punto en ``4326``."
+"dados. ``ST_SetSRID`` se utiliza para establecer el SRID (Identificado de "
+"referencia Espacial) en la geometría del punto en ``4326``."
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:86
 msgid "Pre-processing waterways data"
@@ -167,6 +166,13 @@ msgid ""
 "that the data is of required quality. pgRouting can also be used to do "
 "some Data Adjustments. This will be discussed in further sections."
 msgstr ""
+"El primer paso es preprocesar los datos obtenidos de :doc:`data`. En esta "
+"sección se trabajará el grafo que se va a utilizar para el procesamiento. "
+"Mientras se construye el grafo, se deben inspeccionar los datos para "
+"determinar si hay datos no válidos. Este es un paso muy importante para "
+"garantizar que los datos tengan la calidad requerida. pgRouting también se "
+"puede utilizar para realizar algunos ajustes de datos. Esto se discutirá en "
+"secciones posteriores."
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:95
 msgid "Setting the Search Path of Waterways"
@@ -259,9 +265,8 @@ msgstr ""
 " estructura de la tabla y cómo se almacenan los datos en ella."
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:192
-#, fuzzy
 msgid ":ref:`un_sdg/appendix:**Exercise:** 6 (**Chapter:** SDG 11)`"
-msgstr ":ref:`**Ejercicio:** 6 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 6 (**Capítulo:** ODS 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:195
 msgid "Exercise 7: Removing the Rivers which are in swamps"
@@ -279,9 +284,8 @@ msgstr ""
 "``waterways_ways`` ."
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:209
-#, fuzzy
 msgid ":ref:`un_sdg/appendix:**Exercise:** 7 (**Chapter:** SDG 11)`"
-msgstr ":ref:`**Ejercicio:** 7 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 7 (**Capítulo:** ODS 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:212
 msgid "pgr_connectedComponents for preprocessing waterways"
@@ -323,12 +327,12 @@ msgid ""
 "to identify which edges belong to a river. First, the connected "
 "components are found and then stored in a new column named ``component``."
 msgstr ""
-"Como los ríos en los datos no tienen un solo segmento, es decir, "
-"múltiples segmentos forman un río, es importante encontrar los segmentos "
-"conectados y almacenar la información en la tabla ``waterways_ways``. "
-"Esto  ayudará a identificar cuáles segmentos pertenecen a un río. Primero"
-" se encuentran los componentes conectados y luego se almacenan en una "
-"nueva columna llamada ``component``."
+"Como los ríos en los datos no tienen un solo segmento, es decir, múltiples "
+"segmentos forman un río, es importante encontrar los segmentos conectados y "
+"almacenar la información en la tabla ``waterways_ways``. Esto ayudará a "
+"identificar cuáles segmentos pertenecen a un río. Primero se encuentran los "
+"componentes conectados y luego se almacenan en una nueva columna llamada "
+"``component``."
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:241
 msgid ""
@@ -370,9 +374,8 @@ msgstr ""
 "paso."
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:269
-#, fuzzy
 msgid ":ref:`un_sdg/appendix:**Exercise:** 8 (**Chapter:** SDG 11)`"
-msgstr ":ref:`**Ejercicio:** 8 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 8 (**Capítulo:** ODS 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:272
 msgid "Exercise 9: Creating buffer around the city"
@@ -404,9 +407,8 @@ msgid "Displaying the results of Buffer operation"
 msgstr "Visualización de los resultados de la operación de búfer"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:303
-#, fuzzy
 msgid ":ref:`un_sdg/appendix:**Exercise:** 9 (**Chapter:** SDG 11)`"
-msgstr ":ref:`**Ejercicio:** 9 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 9 (**Capítulo:** ODS 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:306
 msgid "Exercise 10: Creating a function that gets the city buffer"
@@ -448,9 +450,8 @@ msgstr ""
 "obtener todos los bordes que tienen esos componentes."
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:334
-#, fuzzy
 msgid ":ref:`un_sdg/appendix:**Exercise:** 11 (**Chapter:** SDG 11)`"
-msgstr ":ref:`**Ejercicio:** 11 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 11 (**Capítulo:** ODS 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:337
 msgid "Exercise 12: Get the rain zones"
@@ -484,9 +485,8 @@ msgstr ""
 "afectada."
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:365
-#, fuzzy
 msgid ":ref:`un_sdg/appendix:**Exercise:** 12 (**Chapter:** SDG 11)`"
-msgstr ":ref:`**Ejercicio:** 12 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 12 (**Capítulo:** ODS 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:368
 msgid "Exercise 13: Create a union of rain zones"
@@ -501,7 +501,5 @@ msgstr ""
 " '``ST_Union``. Esto dará un solo polígono como salida."
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:380
-#, fuzzy
 msgid ":ref:`un_sdg/appendix:**Exercise:** 13 (**Chapter:** SDG 11)`"
-msgstr ":ref:`**Ejercicio:** 13 (**Capítulo:** ODS 11)`"
-
+msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 13 (**Capítulo:** ODS 11)`"
