--- a/locale/es/LC_MESSAGES/un_sdg/sdg3-health.po
+++ b/locale/es/LC_MESSAGES/un_sdg/sdg3-health.po
@@ -7,21 +7,21 @@
 # Translators:
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # Vicky Vergara <vicky@georepublic.de>, 2022
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-04 11:09-0600\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/un_sdg-sdg3-health/es/>\n"
 "Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:11
@@ -262,8 +262,8 @@ msgid ""
 "The table ``buildings_ways`` contains the buildings in edge form. They "
 "have to be converted into polygons to get the area."
 msgstr ""
-"La tabla `buildings_ways``  contiene los edificios en forma de borde. "
-"Tienen que ser convertidos en polígonos para obtener el área."
+"La tabla `buildings_ways`` contiene los edificios en forma de aristas. "
+"Tienen que ser convertidos a polígonos para obtener el área."
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:196
 msgid "Exercise 6: Add a spatial column to the table"
@@ -966,4 +966,3 @@ msgstr ""
 #, fuzzy
 msgid ":ref:`un_sdg/appendix:**Exercise:** 20 (**Chapter:** SDG 3)`"
 msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 20 (**Capítulo:** ODS 3)`"
-
