--- a/locale/es/LC_MESSAGES/un_sdg/sdg7-energy.po
+++ b/locale/es/LC_MESSAGES/un_sdg/sdg7-energy.po
@@ -7,21 +7,21 @@
 # Translators:
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # Vicky Vergara <vicky@georepublic.de>, 2022
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-04 11:04-0600\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/un_sdg-sdg7-energy/es/>\n"
 "Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:11
@@ -77,9 +77,8 @@ msgid ""
 "To determine the least length of the path for laying the electricity "
 "distribution equipment such that every building is served"
 msgstr ""
-"Determinar la menor longitud del camino para la colocación del equipo de "
-"distribución de electricidad de tal manera que cada edificio sea "
-"atendido."
+"Determinar la menor longitud del camino para la colocación de equipo de "
+"distribución de electricidad de tal manera que cada edificio sea atendido"
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:42
 msgid "**Core Idea**"
@@ -160,7 +159,7 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:72
 msgid "Exercise 1: Inspecting the current schemas"
-msgstr "Ejercicio 1: Inspección de los esquemas"
+msgstr "Ejercicio 1: Inspección de los esquemas actuales"
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:73
 msgid ""
@@ -180,7 +179,7 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:92
 msgid "Exercise 2: Inspecting the current search path"
-msgstr "Ejercicio 2: Inspeccionar la ruta de búsqueda"
+msgstr "Ejercicio 2: Inspeccion de la ruta de búsqueda actual"
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:93
 msgid "Display the current search path using the following query."
@@ -194,7 +193,7 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:109
 msgid "Exercise 3: Fixing the current search path"
-msgstr "Ejercicio 3: Arreglar la ruta de búsqueda"
+msgstr "Ejercicio 3: Arreglo de la ruta de búsqueda"
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:110
 msgid ""
@@ -207,7 +206,7 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:126
 msgid "Exercise 4: Enumerating the tables"
-msgstr "Ejercicio 4: Enumerar tablas"
+msgstr "Ejercicio 4: Enumerar las tablas"
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:127
 msgid ""
@@ -529,7 +528,8 @@ msgstr ""
 #: ../../build/docs/un_sdg/sdg7-energy.rst:373
 #: ../../build/docs/un_sdg/sdg7-energy.rst:389
 msgid "``(length_m)/1000`` is used to fine the length in kilometres"
-msgstr "'``(length_m)/1000``  se utiliza para encontrar la longitud en kilómetros"
+msgstr ""
+"'``(length_m)/1000`` se utiliza para encontrar la longitud en kilómetros"
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:377
 #, fuzzy
@@ -584,4 +584,3 @@ msgid "Finding the optimal number and locations of Electricity Transformers"
 msgstr ""
 "Encontrar el número y la ubicación óptimos de los transformadores de "
 "electricidad"
-
