--- a/locale/es/LC_MESSAGES/appendix/appendix-3.po
+++ b/locale/es/LC_MESSAGES/appendix/appendix-3.po
@@ -8,21 +8,22 @@
 # Vicky Vergara <vicky@georepublic.de>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # 
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-10 17:38+0000\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: MarPetra <mvergaratrejo@gmail.com>, 2021\n"
-"Language-Team: Spanish (https://www.transifex.com/pgrouting/teams/1219/es/)\n"
+"PO-Revision-Date: 2024-03-19 05:57+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/appendix-appendix-3/es/>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.9.1\n"
-"Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../../build/docs/appendix/appendix-3.rst:13
 msgid "Appendix: osm2pgrouting Import Tool"
@@ -36,8 +37,8 @@ msgid ""
 msgstr ""
 "**osm2pgrouting** es una herramienta de línea de comandos que permite "
 "importar datos de OpenStreetMap a una base de datos pgRouting. Crea "
-"automáticamente la topología de red de ruteo  y crea tablas para atributos "
-"de tipos y clases de caminos."
+"automáticamente la topología de red de ruteo y crea tablas para atributos de "
+"tipos y clases de caminos."
 
 #: ../../build/docs/appendix/appendix-3.rst:19
 msgid "Website: |osm2pgrouting-web|"
@@ -70,10 +71,10 @@ msgid ""
 "needed for routing. Also the format is not suitable for pgRouting out-of-"
 "the-box. An ``.osm`` XML file consists of three major feature types:"
 msgstr ""
-"Los datos sin procesar de OpenStreetMap contienen muchas más características"
-" e información de la necesaria para el enrutamiento. Además, el formato no "
-"es adecuado para usar automáticamente en pgRouting. Un archivo XML ``.osm``"
-"  consta de tres tipos de atributos principales:"
+"Los datos sin procesar de OpenStreetMap contienen muchas más características "
+"e información de la necesaria para el enrutamiento. Además, el formato no es "
+"adecuado para usar automáticamente en pgRouting. Un archivo XML ``.osm`` "
+"consta de tres tipos de atributos principales:"
 
 #: ../../build/docs/appendix/appendix-3.rst:34
 msgid "nodes"
@@ -106,8 +107,8 @@ msgid ""
 "<https://wiki.openstreetmap.org/wiki/Map_features>`__"
 msgstr ""
 "La descripción detallada de todos los tipos y clases de OpenStretMap "
-"posibles se describen como `características del mapa  "
-"<https://wiki.openstreetmap.org/wiki/Map_features>`__"
+"posibles se describen como `características del mapa <https://wiki."
+"openstreetmap.org/wiki/Map_features>`__"
 
 #: ../../build/docs/appendix/appendix-3.rst:59
 msgid "mapconfig.xml"
