--- a/locale/es/LC_MESSAGES/basic/plpgsql_function.po
+++ b/locale/es/LC_MESSAGES/basic/plpgsql_function.po
@@ -8,21 +8,21 @@
 # Manuel Retamozo <manuel.retamozo@gmail.com>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # Vicky Vergara <vicky@georepublic.de>, 2022
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-08 16:17+0000\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/basic-plpgsql_function/es/>\n"
 "Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/basic/plpgsql_function.rst:11
@@ -139,7 +139,7 @@ msgstr "lon1"
 
 #: ../../build/docs/basic/plpgsql_function.rst:42
 msgid "The longitude of the `departure`  point."
-msgstr "La longitud del punto de `partida`"
+msgstr "La longitud del punto de `partida`."
 
 #: ../../build/docs/basic/plpgsql_function.rst:43
 msgid "lat2"
@@ -179,7 +179,7 @@ msgstr "*seq*"
 
 #: ../../build/docs/basic/plpgsql_function.rst:54
 msgid "For ordering purposes."
-msgstr "Para fines ordenamiento"
+msgstr "Para fines ordenamiento."
 
 #: ../../build/docs/basic/plpgsql_function.rst:55
 msgid "*gid*"
@@ -238,14 +238,12 @@ msgid "For this chapter, the following points will be used for testing."
 msgstr "Para este capítulo, se utilizarán los siguientes puntos para las pruebas."
 
 #: ../../build/docs/basic/plpgsql_function.rst:66
-#, fuzzy
 msgid "(lat,lon) = (42.2151, 20.729354)"
-msgstr "(lat,lon) = (-34.59, -58.4112)"
+msgstr "(lat,lon) = (42.2151, 20.729354)"
 
 #: ../../build/docs/basic/plpgsql_function.rst:67
-#, fuzzy
 msgid "(lat,lon) = (42.2147, 20.7312)"
-msgstr "(lat,lon) = (-34.59, -58.4112)"
+msgstr "(lat,lon) = (42.2147, 20.7312)"
 
 #: ../../build/docs/basic/plpgsql_function.rst:69
 msgid "Saving this information on a table:"
@@ -357,7 +355,7 @@ msgstr "Solución"
 #: ../../build/docs/basic/plpgsql_function.rst:112
 #: ../../build/docs/basic/plpgsql_function.rst:193
 msgid "For ``ways``:"
-msgstr "Para ``ways``"
+msgstr "Para ``ways``:"
 
 #: ../../build/docs/basic/plpgsql_function.rst:114
 #: ../../build/docs/basic/plpgsql_function.rst:195
@@ -404,8 +402,8 @@ msgid ""
 "`UNION <https://www.postgresql.org/docs/current/typeconv-union-"
 "case.html>`__ both results (line **6**)"
 msgstr ""
-"`UNIÓN  <https://www.postgresql.org/docs/current/typeconv-union-"
-"case.html>`__ de ambos resultados (línea **6**)"
+"`UNIÓN <https://www.postgresql.org/docs/current/typeconv-union-case.html>`__ "
+"de ambos resultados (línea **6**)"
 
 #: ../../build/docs/basic/plpgsql_function.rst:141
 #: ../../build/docs/basic/plpgsql_function.rst:218
@@ -438,7 +436,6 @@ msgstr ""
 "(líneas **4** y **9**)"
 
 #: ../../build/docs/basic/plpgsql_function.rst:165
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** pl/pgsql)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 1 (**Capítulo:** pl/pgsql)`"
 
@@ -528,9 +525,9 @@ msgid ""
 "``id`` column of ``vehicle_net_vertices_pgr`` must also have the "
 "``osm_id`` values"
 msgstr ""
-"Los valores de las columnas de origen y destino tienen los valores "
-"``sm_id``, por lo tanto, la columna ``id`` de "
-"``vehicle_net_vertices_pgr`` también debe tener los valores ``osm_id``."
+"Los valores de las columnas de origen y destino tienen los valores ``osm_id``"
+", por lo tanto, la columna ``id`` de ``vehicle_net_vertices_pgr`` también "
+"debe tener los valores ``osm_id``"
 
 #: ../../build/docs/basic/plpgsql_function.rst:220
 #: ../../build/docs/basic/plpgsql_function.rst:230
@@ -542,7 +539,6 @@ msgstr ""
 "(líneas **3**, **8** y **11**)"
 
 #: ../../build/docs/basic/plpgsql_function.rst:240
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** pl/pgsql)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 2 (**Capítulo:** pl/pgsql)`"
 
@@ -555,13 +551,12 @@ msgid "Calculate the OSM identifier of the nearest vertex to a point."
 msgstr "Calcule el identificador OSM del vértice más cercano a un punto."
 
 #: ../../build/docs/basic/plpgsql_function.rst:249
-#, fuzzy
 msgid ""
 "In particular use the following (lat,lon) value:  ``(42.2151, "
 "20.729354)``."
 msgstr ""
-"En particular, utilice el siguiente valor (lat,lon): ``(-34.59, "
-"-58.4112)``."
+"En particular, utilice el siguiente valor (lat,lon): ``(42.2151, 20."
+"729354)``."
 
 #: ../../build/docs/basic/plpgsql_function.rst:251
 #: ../../build/docs/basic/plpgsql_function.rst:396
@@ -588,8 +583,8 @@ msgid ""
 "The ``ways`` and the ``ways_vertices_pgr`` tables are not used on the "
 "**final applications**"
 msgstr ""
-"Las tablas ``ways`` y  ``ways_vertices_pgr``  no se utilizan en las "
-"**aplicaciones finales**"
+"Las tablas ``ways`` y ``ways_vertices_pgr`` no se utilizan en las **"
+"aplicaciones finales**"
 
 #: ../../build/docs/basic/plpgsql_function.rst:259
 msgid ""
@@ -669,7 +664,6 @@ msgstr ""
 "``walk_net_vertices_pgr``. (línea **2**)"
 
 #: ../../build/docs/basic/plpgsql_function.rst:315
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** pl/pgsql)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 3 (**Capítulo:** pl/pgsql)`"
 
@@ -727,7 +721,7 @@ msgstr "lon"
 
 #: ../../build/docs/basic/plpgsql_function.rst:336
 msgid "The longitude of a point."
-msgstr "La longitud de un punto"
+msgstr "La longitud de un punto."
 
 #: ../../build/docs/basic/plpgsql_function.rst:339
 msgid "The output:"
@@ -746,14 +740,12 @@ msgid "The function returns only one value. (line **5**)"
 msgstr "La función devuelve solo un valor. (línea **5**)"
 
 #: ../../build/docs/basic/plpgsql_function.rst:350
-#, fuzzy
 msgid ""
 "Using `format <https://www.postgresql.org/docs/12/functions-string.html"
 "#FUNCTIONS-STRING-FORMAT>`__ to build the query. (line **10**)"
 msgstr ""
-"Usando `formato <ihttps://www.postgresql.org/docs/12/functions-"
-"string.html#FUNCTIONS-STRING-FORMAT>`__ para construir la consulta. "
-"(línea **10**)"
+"Usando `format <ihttps://www.postgresql.org/docs/12/functions-string.html"
+"#FUNCTIONS-STRING-FORMAT>`__ para construir la consulta. (línea **10**)"
 
 #: ../../build/docs/basic/plpgsql_function.rst:352
 msgid ""
@@ -784,7 +776,6 @@ msgstr ""
 "de la función que estamos creando. (línea **19**)"
 
 #: ../../build/docs/basic/plpgsql_function.rst:368
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** pl/pgsql)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 4 (**Capítulo:** pl/pgsql)`"
 
@@ -794,28 +785,27 @@ msgstr "Ejercicio 5: Prueba de la función vértice más cercano"
 
 #: ../../build/docs/basic/plpgsql_function.rst:-1
 msgid "Nearest Vertex in vehicle network"
-msgstr ""
+msgstr "Nodo más cercano en la red vehicular"
 
 #: ../../build/docs/basic/plpgsql_function.rst:-1
 msgid "Nearest Vertex in taki network"
-msgstr ""
+msgstr "Nodo más cercano en la red de taxis"
 
 #: ../../build/docs/basic/plpgsql_function.rst:-1
 msgid "Nearest Vertex in walk network"
-msgstr ""
+msgstr "Nodo más cercano en la red peatonal"
 
 #: ../../build/docs/basic/plpgsql_function.rst:388
 msgid "Test the ``wrk_NearestOSM`` function."
 msgstr "Pruebe la función ``wrk_NearestOSM``."
 
 #: ../../build/docs/basic/plpgsql_function.rst:390
-#, fuzzy
 msgid ""
 "In particular use the following (lat,lon) values:  ``(42.2151, "
 "20.729354)``."
 msgstr ""
-"En particular, utilice los siguientes valores (lat,lon): ``(-34.59, "
-"-58.4112)``."
+"En particular, utilice los siguientes valores (lat,lon): ``(42.2151, 20."
+"729354)``."
 
 #: ../../build/docs/basic/plpgsql_function.rst:392
 msgid "The point is the same as in `Exercise 3: Nearest Vertex`_ problem."
@@ -870,7 +860,7 @@ msgid ""
 "Similar solution as in previous query but on ``taxi_net_vertices_pgr``. "
 "(lines **2**)"
 msgstr ""
-"Solución similar a la de la consulta anterior pero en  "
+"Solución similar a la de la consulta anterior pero en "
 "``taxi_net_vertices_pgr``. (líneas **2**)"
 
 #: ../../build/docs/basic/plpgsql_function.rst:444
@@ -882,7 +872,6 @@ msgstr ""
 "``walk_net_vertices_pgr``. (líneas **2**)"
 
 #: ../../build/docs/basic/plpgsql_function.rst:455
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** pl/pgsql)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 5 (**Capítulo:** pl/pgsql)`"
 
@@ -902,7 +891,7 @@ msgstr "Ejercicio 6: Creación de la función principal"
 
 #: ../../build/docs/basic/plpgsql_function.rst:469
 msgid "Create the function ``wrk_fromAtoB``."
-msgstr "Crear la función  ``wrk_fromAtoB``."
+msgstr "Crear la función ``wrk_fromAtoB``."
 
 #: ../../build/docs/basic/plpgsql_function.rst:470
 msgid "Follow the description given at `Requirements for routing from A to B`_."
@@ -928,16 +917,15 @@ msgstr "Recibe el punto en formato de lenguaje natural."
 
 #: ../../build/docs/basic/plpgsql_function.rst:476
 msgid "Obtains the OSM identifier needed by ``wrk_dijkstra``."
-msgstr "Obtiene el identificador OSM necesario por  ``wrk_dijkstra``."
+msgstr "Obtiene el identificador OSM necesario por ``wrk_dijkstra``."
 
 #: ../../build/docs/basic/plpgsql_function.rst:478
-#, fuzzy
 msgid ""
 "``wrk_dijkstra`` created on :ref:`basic/sql_function:Exercise 10: "
 "Function for an application`."
 msgstr ""
-"``wrk_dijkstra`` creado en :ref:`basic/sql_function:Ejercicio 10: Función"
-" para una aplicación`."
+"``wrk_dijkstra`` creado en :ref:`basic/sql_function:Ejercicio 10: Función "
+"para una aplicación`."
 
 #: ../../build/docs/basic/plpgsql_function.rst:482
 msgid "The function's signature:"
@@ -1050,7 +1038,6 @@ msgstr ""
 "(líneas **20** a **22**)"
 
 #: ../../build/docs/basic/plpgsql_function.rst:532
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** pl/pgsql)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 6 (**Capítulo:** pl/pgsql)`"
 
@@ -1067,14 +1054,12 @@ msgid "Use ``wrk_fromAtoB``"
 msgstr "Usar ``wrk_fromAtoB``"
 
 #: ../../build/docs/basic/plpgsql_function.rst:545
-#, fuzzy
 msgid "Departure point is: (lat,lon) = ``(42.2151, 20.729354)``"
-msgstr "El punto de partida es: (lat,lon) = ``(-34.59, -58.4112)``"
+msgstr "El punto de partida es: (lat,lon) = ``(42.2151, 20.729354)``"
 
 #: ../../build/docs/basic/plpgsql_function.rst:546
-#, fuzzy
 msgid "Destination point is: (lat,lon) = ``(42.2147, 20.7312)``"
-msgstr "El punto de destino es: (lat,lon) = ``(-34.5850, -58.4077)``"
+msgstr "El punto de destino es: (lat,lon) = ``(42.2147, 20.7312)``"
 
 #: ../../build/docs/basic/plpgsql_function.rst:549
 #: ../../build/docs/basic/plpgsql_function.rst:557
@@ -1140,7 +1125,5 @@ msgstr ""
 " **8** y **9**)."
 
 #: ../../build/docs/basic/plpgsql_function.rst:605
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 7 (**Chapter:** pl/pgsql)`"
 msgstr ":ref:`basic/appendix:**Ejercicio**: 7 (**Capítulo:** pl/pgsql)`"
-
