--- a/locale/es/LC_MESSAGES/basic/vehicle.po
+++ b/locale/es/LC_MESSAGES/basic/vehicle.po
@@ -8,21 +8,21 @@
 # Manuel Retamozo <manuel.retamozo@gmail.com>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # Vicky Vergara <vicky@georepublic.de>, 2022
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-20 15:37-0600\n"
-"PO-Revision-Date: 2021-10-10 17:39+0000\n"
-"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
+"PO-Revision-Date: 2024-03-22 16:47+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
+"pgrouting-workshop/basic-vehicle/es/>\n"
 "Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/basic/vehicle.rst:12
@@ -128,7 +128,6 @@ msgstr ""
 "inserta en el grafo para su procesamiento."
 
 #: ../../build/docs/basic/vehicle.rst:54
-#, fuzzy
 msgid ""
 "**Two way** roads - ``IF cost >= 0 AND reverse_cost >= 0`` and their "
 "values can be different. For example, it is faster going down hill on a "
@@ -136,12 +135,12 @@ msgid ""
 "length; they can be almost anything, for example - time, slope, surface, "
 "road type, etc., or they can be a combination of multiple parameters."
 msgstr ""
-"**Carreteras bidireccionales** -``IF cost >= 0 AND reverse_cost >= 0`` y "
-"sus valores pueden ser diferentes. Por ejemplo, es más rápido ir cuesta "
-"abajo en una carretera inclinada. En general, ``cost`` y ``reverse_cost``"
-"  no necesitan ser de longitud; pueden ser casi cualquier cosa, por "
-"ejemplo, tiempo, pendiente, superficie, tipo de carretera, etc., o pueden"
-" ser una combinación de múltiples parámetros."
+"**Carreteras bidireccionales** -``IF cost >= 0 AND reverse_cost >= 0`` y sus "
+"valores pueden ser diferentes. Por ejemplo, es más rápido ir cuesta abajo en "
+"una carretera inclinada. En general, ``cost`` y ``reverse_cost`` no "
+"necesitan ser de longitud; pueden ser casi cualquier cosa, por ejemplo, "
+"tiempo, pendiente, superficie, tipo de carretera, etc., o pueden ser una "
+"combinación de múltiples parámetros."
 
 #: ../../build/docs/basic/vehicle.rst:61
 msgid ""
@@ -175,9 +174,8 @@ msgid "Problem:"
 msgstr "Problema:"
 
 #: ../../build/docs/basic/vehicle.rst:92
-#, fuzzy
 msgid "From the \"|place_1|\" to the \"|place_3|\" by car."
-msgstr "Desde el lugar \"|place_3|\" hacia \"|place_1|\" en automóvil."
+msgstr "Desde \"|place_1|\" hacia \"|place_3|\" en automóvil."
 
 #: ../../build/docs/basic/vehicle.rst:-1
 msgid "From |place_1| to the |place_3| by car."
@@ -209,18 +207,16 @@ msgstr ""
 "**7**), que están en la unidad ``grados``."
 
 #: ../../build/docs/basic/vehicle.rst:112
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** Vehicle)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 1 (**Capítulo:** vehículo)`"
+msgstr ":ref:`basic/appendix:**Ejercicio**: 1 (**Capítulo:** Vehículo)`"
 
 #: ../../build/docs/basic/vehicle.rst:116
 msgid "Exercise 2: Vehicle routing - returning"
 msgstr "Ejercicio 2: Ruteo de vehículos - regreso"
 
 #: ../../build/docs/basic/vehicle.rst:120
-#, fuzzy
 msgid "From \"|place_3|\" to the \"|place_1|\" by car."
-msgstr "Desde el lugar \"|place_3|\" hacia \"|place_1|\" en automóvil."
+msgstr "Desde \"|place_3|\" hacia \"|place_1|\" en automóvil."
 
 #: ../../build/docs/basic/vehicle.rst:-1
 msgid "From |place_3| to the |place_1| by car."
@@ -235,9 +231,8 @@ msgstr ""
 "**11**)."
 
 #: ../../build/docs/basic/vehicle.rst:140
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** Vehicle)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 2 (**Capítulo:** vehículo)`"
+msgstr ":ref:`basic/appendix:**Ejercicio**: 2 (**Capítulo:** Vehículo)`"
 
 #: ../../build/docs/basic/vehicle.rst:142
 msgid ""
@@ -269,8 +264,8 @@ msgid ""
 "Use ``cost_s`` (line **6**) and ``reverse_cost_s`` (line **7**) columns, "
 "which are in unit ``seconds``."
 msgstr ""
-"Utilice las columnas ``cost_s`` (línea **6**) y ``reverse_cost_s`` (línea"
-" **7**) que están en la unidad  ``segundos``."
+"Utilizar las columnas ``cost_s`` (línea **6**) y ``reverse_cost_s`` (línea "
+"**7**) que están en unidad de ``segundos``."
 
 #: ../../build/docs/basic/vehicle.rst:161
 msgid "The duration in hours is ``cost_s / 3600``."
@@ -281,9 +276,8 @@ msgid "The cost in ``$`` is ``cost_s / 3600 * 100``."
 msgstr "El costo en ``$`` es ``cost_s / 3600 * 100``."
 
 #: ../../build/docs/basic/vehicle.rst:173
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** Vehicle)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 3 (**Capítulo:** vehículo)`"
+msgstr ":ref:`basic/appendix:**Ejercicio**: 3 (**Capítulo:** Vehículo)`"
 
 #: ../../build/docs/basic/vehicle.rst:176
 msgid "Comparing with `Exercise 2: Vehicle routing - returning`_:"
@@ -423,13 +417,12 @@ msgid ""
 "the :code:`tag_id` field using a ``JOIN`` (lines **14** and **15**)."
 msgstr ""
 "La tabla :code:`configuration` está vinculada a la tabla :code:`ways` "
-"mediante el campo  :code:`tag_id` mediante un campo ``JOIN`` (líneas "
-"**14** y **15**)."
+"mediante el campo :code:`tag_id` y usando un ``JOIN`` (líneas **14** y "
+"**15**)."
 
 #: ../../build/docs/basic/vehicle.rst:282
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** Vehicle)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 4 (**Capítulo:** vehículo)`"
+msgstr ":ref:`basic/appendix:**Ejercicio**: 4 (**Capítulo:** Vehículo)`"
 
 #: ../../build/docs/basic/vehicle.rst:286
 msgid "Exercise 5: Vehicle routing with penalization"
@@ -497,15 +490,13 @@ msgstr ""
 "**9**)."
 
 #: ../../build/docs/basic/vehicle.rst:329
-#, fuzzy
 msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** Vehicle)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 5 (**Capítulo:** vehículo)`"
+msgstr ":ref:`basic/appendix:**Ejercicio**: 5 (**Capítulo:** Vehículo)`"
 
 #: ../../build/docs/basic/vehicle.rst:332
 msgid "Comparing with `Exercise 3: Vehicle routing when time is money`_:"
 msgstr ""
-"Comparando con `Ejercicio 3: Ruteo de vehículos cuando el tiempo es "
-"dinero`_"
+"Comparando con `Ejercicio 3: Ruteo de vehículos cuando el tiempo es dinero`_:"
 
 #: ../../build/docs/basic/vehicle.rst:334
 msgid "The total number of records changed."
@@ -533,4 +524,3 @@ msgstr ""
 "El costo no cambió proporcionalmente debido a la penalización a algunas "
 "de las carreteras que era uniforme (penalización = 1) mientras que el "
 "enrutamiento con el costo como dinero."
-
